--- a/Python/FigureForTwoPump.ipynb
+++ b/Python/FigureForTwoPump.ipynb
@@ -30,7 +30,41 @@
     "plt.rcParams['xtick.direction'] = 'in'\n",
     "plt.rcParams['ytick.direction'] = 'in'\n",
     "from mpl_toolkits.mplot3d import Axes3D\n",
-    "\n",
+    "import numpy \n",
+    "def setlabel(ax, label, loc=2, borderpad=0.6, **kwargs):\n",
+    "    legend = ax.get_legend()\n",
+    "    if legend:\n",
+    "        ax.add_artist(legend)\n",
+    "    line, = ax.plot(numpy.NaN,numpy.NaN,color='none',label=label)\n",
+    "    label_legend = ax.legend(handles=[line],\n",
+    "                             loc=[-0.15,1.001],\n",
+    "                             handlelength=0,\n",
+    "                             handleheight=0,\n",
+    "                             handletextpad=0,\n",
+    "                             borderaxespad=0,\n",
+    "                             borderpad=borderpad,\n",
+    "                             frameon=False,\n",
+    "                             **kwargs)\n",
+    "    label_legend.remove()\n",
+    "    ax.add_artist(label_legend)\n",
+    "    line.remove()\n",
+    "def setlabelm(ax, label, loc, borderpad=0.6, **kwargs):\n",
+    "    legend = ax.get_legend()\n",
+    "    if legend:\n",
+    "        ax.add_artist(legend)\n",
+    "    line, = ax.plot(numpy.NaN,numpy.NaN,color='none',label=label)\n",
+    "    label_legend = ax.legend(handles=[line],\n",
+    "                             loc=loc,\n",
+    "                             handlelength=0,\n",
+    "                             handleheight=0,\n",
+    "                             handletextpad=0,\n",
+    "                             borderaxespad=0,\n",
+    "                             borderpad=borderpad,\n",
+    "                             frameon=False,\n",
+    "                             **kwargs)\n",
+    "    label_legend.remove()\n",
+    "    ax.add_artist(label_legend)\n",
+    "    line.remove()\n",
     "levels=100\n",
     "figureDPI=1200\n",
     "figureType=\"jpeg\"\n",
@@ -157,7 +191,7 @@
     "fig, ax = plt.subplots()\n",
     "ax.stackplot(t, population_by_continent.values(),\n",
     "             labels=population_by_continent.keys(), alpha=0.6)\n",
-    "ax.legend(loc='upper left')\n",
+    "ax.legend(loc=0)\n",
     "#ax.set_title('World population')\n",
     "ax.set_xlabel('Time (fs)')\n",
     "ax.set_ylabel('Energy (a.u.)')\n",
@@ -171,63 +205,63 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.figure(figsize=(32/2.54,26/2.54))\n",
-    "intDir='D:\\\\doc\\\\data\\\\ion1test\\\\2040\\\\'\n",
-    "fig = plt.figure(constrained_layout=True)\n",
-    "import matplotlib.gridspec as gridspec\n",
-    "gs = gridspec.GridSpec(3, 3)\n",
-    "data=np.loadtxt(intDir+'kpos.dat')\n",
-    "x=data[:,0]\n",
-    "y=data[:,1]\n",
-    "z1=data[:,2]\n",
-    "z2=data[:,3]\n",
-    "z3=data[:,4]\n",
-    "ax11 = fig.add_subplot(gs[0,0])\n",
-    "ax11.tricontourf(x,y,z1,levels,cmap='jet')\n",
-    "plt.ylim(-5.5,max(y))\n",
-    "plt.xlabel(\"Time (fs)\")\n",
-    "plt.ylabel(\"Momentum (a.u.)\")\n",
-    "ax21 = fig.add_subplot(gs[0,1],sharex=ax11, sharey=ax11)\n",
-    "ax21.tricontourf(x,y,z2,levels,cmap='jet')\n",
-    "ax31 = fig.add_subplot(gs[0,2],sharex=ax11, sharey=ax11)\n",
-    "ax31.tricontourf(x,y,z3,levels,cmap='jet')\n",
+    "# plt.figure(figsize=(32/2.54,26/2.54))\n",
+    "# intDir='D:\\\\doc\\\\data\\\\ion1test\\\\2040\\\\'\n",
+    "# fig = plt.figure(constrained_layout=True)\n",
+    "# import matplotlib.gridspec as gridspec\n",
+    "# gs = gridspec.GridSpec(3, 3)\n",
+    "# data=np.loadtxt(intDir+'kpos.dat')\n",
+    "# x=data[:,0]\n",
+    "# y=data[:,1]\n",
+    "# z1=data[:,2]\n",
+    "# z2=data[:,3]\n",
+    "# z3=data[:,4]\n",
+    "# ax11 = fig.add_subplot(gs[0,0])\n",
+    "# ax11.tricontourf(x,y,z1,levels,cmap='jet')\n",
+    "# plt.ylim(-5.5,max(y))\n",
+    "# plt.xlabel(\"Time (fs)\")\n",
+    "# plt.ylabel(\"Momentum (a.u.)\")\n",
+    "# ax21 = fig.add_subplot(gs[0,1],sharex=ax11, sharey=ax11)\n",
+    "# ax21.tricontourf(x,y,z2,levels,cmap='jet')\n",
+    "# ax31 = fig.add_subplot(gs[0,2],sharex=ax11, sharey=ax11)\n",
+    "# ax31.tricontourf(x,y,z3,levels,cmap='jet')\n",
     "\n",
-    "data=np.loadtxt(intDir+'kneg.dat')\n",
-    "x=data[:,0]\n",
-    "y=data[:,1]\n",
-    "z1=data[:,2]\n",
-    "z2=data[:,3]\n",
-    "z3=data[:,4]\n",
-    "ax12 = fig.add_subplot(gs[1,0],sharex=ax11)\n",
-    "ax12.tricontourf(x,y,z1,levels,cmap='jet')\n",
-    "ax22 = fig.add_subplot(gs[1,1],sharex=ax11)\n",
-    "ax22.tricontourf(x,y,z2,levels,cmap='jet')\n",
-    "ax32 = fig.add_subplot(gs[1,2],sharex=ax11)\n",
-    "ax32.tricontourf(x,y,z3,levels,cmap='jet')\n",
-    "# plt.ylim(min(y),5.5)\n",
+    "# data=np.loadtxt(intDir+'kneg.dat')\n",
+    "# x=data[:,0]\n",
+    "# y=data[:,1]\n",
+    "# z1=data[:,2]\n",
+    "# z2=data[:,3]\n",
+    "# z3=data[:,4]\n",
+    "# ax12 = fig.add_subplot(gs[1,0],sharex=ax11)\n",
+    "# ax12.tricontourf(x,y,z1,levels,cmap='jet')\n",
+    "# ax22 = fig.add_subplot(gs[1,1],sharex=ax11)\n",
+    "# ax22.tricontourf(x,y,z2,levels,cmap='jet')\n",
+    "# ax32 = fig.add_subplot(gs[1,2],sharex=ax11)\n",
+    "# ax32.tricontourf(x,y,z3,levels,cmap='jet')\n",
+    "# # plt.ylim(min(y),5.5)\n",
     "\n",
-    "data=np.loadtxt(intDir+'ktot.dat')\n",
-    "x=data[:,0]\n",
-    "y=data[:,1]\n",
-    "z1=data[:,2]\n",
-    "z2=data[:,3]\n",
-    "z3=data[:,4]\n",
-    "ax13= fig.add_subplot(gs[2,0],sharex=ax11)\n",
-    "ax13.tricontourf(x,y,z1,levels,cmap='jet')\n",
-    "ax23= fig.add_subplot(gs[2,1],sharex=ax11)\n",
-    "ax23.tricontourf(x,y,z2,levels,cmap='jet')\n",
-    "ax33= fig.add_subplot(gs[2,2],sharex=ax11)\n",
-    "ax33.tricontourf(x,y,z3,levels,cmap='jet')\n",
-    "#plt.ylim(-5.5,5.5)\n",
-    "plt.subplots_adjust(left=0.1,\n",
-    "                    bottom=0.1, \n",
-    "                    right=0.9, \n",
-    "                    top=0.9, \n",
-    "                    wspace=0.3, \n",
-    "                    hspace=0.3)\n",
-    "plt.savefig(outDir+'K.'+figureType,bbox_inches ='tight',dpi=figureDPI)\n",
+    "# data=np.loadtxt(intDir+'ktot.dat')\n",
+    "# x=data[:,0]\n",
+    "# y=data[:,1]\n",
+    "# z1=data[:,2]\n",
+    "# z2=data[:,3]\n",
+    "# z3=data[:,4]\n",
+    "# ax13= fig.add_subplot(gs[2,0],sharex=ax11)\n",
+    "# ax13.tricontourf(x,y,z1,levels,cmap='jet')\n",
+    "# ax23= fig.add_subplot(gs[2,1],sharex=ax11)\n",
+    "# ax23.tricontourf(x,y,z2,levels,cmap='jet')\n",
+    "# ax33= fig.add_subplot(gs[2,2],sharex=ax11)\n",
+    "# ax33.tricontourf(x,y,z3,levels,cmap='jet')\n",
+    "# #plt.ylim(-5.5,5.5)\n",
+    "# plt.subplots_adjust(left=0.1,\n",
+    "#                     bottom=0.1, \n",
+    "#                     right=0.9, \n",
+    "#                     top=0.9, \n",
+    "#                     wspace=0.3, \n",
+    "#                     hspace=0.3)\n",
+    "# plt.savefig(outDir+'K.'+figureType,bbox_inches ='tight',dpi=figureDPI)\n",
     "\n",
-    "plt.show()"
+    "# plt.show()"
    ]
   },
   {
@@ -251,22 +285,22 @@
     "z4=z1+z2+z3\n",
     "ax1= fig.add_subplot(gs[0,0])\n",
     "ax1.tricontourf(x,y,z1,levels,cmap='jet')\n",
-    "plt.title(\"(a)\",loc='left')\n",
+    "setlabelm(ax1,\"(a)\",[-0.2,1.01])\n",
     "plt.xlabel(\"Time (fs)\")\n",
     "plt.ylabel(\"Momentum (arb.units)\")\n",
     "ax2= fig.add_subplot(gs[0,1],sharex=ax1,sharey=ax1)\n",
     "ax2.tricontourf(x,y,z2,levels,cmap='jet')\n",
-    "plt.title(\"(b)\",loc='left')\n",
+    "setlabelm(ax2,\"(b)\",[-0.2,1.01])\n",
     "plt.xlabel(\"Time (fs)\")\n",
     "plt.ylabel(\"Momentum (arb.units)\")\n",
     "ax3= fig.add_subplot(gs[1,0],sharex=ax1,sharey=ax1)\n",
     "ax3.tricontourf(x,y,z3,levels,cmap='jet')\n",
-    "plt.title(\"(c)\",loc='left')\n",
+    "setlabelm(ax3,\"(c)\",[-0.2,1.01])\n",
     "plt.xlabel(\"Time (fs)\")\n",
     "plt.ylabel(\"Momentum (arb.units)\")\n",
     "ax4= fig.add_subplot(gs[1,1],sharex=ax1,sharey=ax1)\n",
     "ax4.tricontourf(x,y,z4,levels,cmap='jet')\n",
-    "plt.title(\"(d)\",loc='left')\n",
+    "setlabelm(ax4,\"(d)\",[-0.2,1.01])\n",
     "plt.xlabel(\"Time (fs)\")\n",
     "plt.ylabel(\"Momentum (arb.units)\")\n",
     "#plt.ylim(-5.5,5.5)\n",
@@ -289,93 +323,40 @@
    "source": [
     "\n",
     "titleLoc='left'\n",
-    "plt.figure(figsize=(16/2.54,13/2.54))\n",
+    "plt.figure(figsize=(8/2.54,13/2.54))\n",
     "for i in range(0,1,1):\n",
     "    data1=np.loadtxt('D:\\\\doc\\\\data\\\\ion1test\\\\twopump\\\\20'+str(i+3)+'0100\\\\Excradwave.dat')\n",
     "    data2=np.loadtxt('D:\\\\doc\\\\data\\\\ion1test\\\\twopump\\\\20'+str(i+3)+'0100\\\\Ionradwave.dat')\n",
-    "    plt.subplot(2,1,1)\n",
+    "    ax1=plt.subplot(2,1,1)\n",
     "    x=data1[:,0]\n",
     "    y=data1[:,1]\n",
     "    z=data1[:,2]\n",
-    "    plt.title(\"(a)\")\n",
+    "    setlabelm(ax1,\"(a)\",[-0.2,1.01])\n",
     "    #plt.xlim(TimeTurn,TimeEnd)\n",
     "    plt.ylim(1.75,10.0)\n",
     "    plt.tricontourf(x,y,z,levels,cmap='jet')\n",
     "    plt.colorbar()\n",
     "    plt.xlabel(\"Time (\"+timeUnit+\")\")\n",
     "    plt.ylabel(\"$R$ (a.u.)\")\n",
-    "    plt.subplot(2,1,2)\n",
+    "    ax2=plt.subplot(2,1,2)\n",
     "    x=data2[:,0]\n",
     "    y=data2[:,1]\n",
     "    z=data2[:,2]\n",
-    "    plt.title(\"(b)\",loc=titleLoc)\n",
+    "    setlabelm(ax2,\"(b)\",[-0.2,1.01])\n",
     "    #plt.xlim(TimeTurn,TimeEnd)\n",
     "    plt.ylim(1.75,10.0)\n",
     "    plt.tricontourf(x,y,z,levels,cmap='jet')\n",
     "    plt.colorbar()\n",
     "    plt.xlabel(\"Time (\"+timeUnit+\")\")\n",
     "    plt.ylabel(\"$R$ (a.u.)\")\n",
+    "    plt.subplots_adjust(left=0.1,\n",
+    "                    bottom=0.1, \n",
+    "                    right=0.9, \n",
+    "                    top=0.9, \n",
+    "                    wspace=0.3, \n",
+    "                    hspace=0.3)\n",
     "    figName=outDir+'ExcIonradWave20'+str(i+3)+'0100.'+figureType\n",
     "    plt.savefig(figName,bbox_inches='tight',dpi=figureDPI)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import numpy as np\n",
-    "from matplotlib import cbook\n",
-    "import matplotlib.pyplot as plt\n",
-    "from matplotlib.colors import LightSource\n",
-    "\n",
-    "\n",
-    "def main():\n",
-    "    # Test data\n",
-    "    x, y = np.mgrid[-5:5:0.05, -5:5:0.05]\n",
-    "    z = 5 * (np.sqrt(x**2 + y**2) + np.sin(x**2 + y**2))\n",
-    "\n",
-    "    dem = cbook.get_sample_data('jacksboro_fault_dem.npz', np_load=True)\n",
-    "    elev = dem['elevation']\n",
-    "\n",
-    "    fig = compare(z, plt.cm.copper)\n",
-    "    fig.suptitle('HSV Blending Looks Best with Smooth Surfaces', y=0.95)\n",
-    "\n",
-    "    fig = compare(elev, plt.cm.gist_earth, ve=0.05)\n",
-    "    fig.suptitle('Overlay Blending Looks Best with Rough Surfaces', y=0.95)\n",
-    "\n",
-    "    plt.show()\n",
-    "\n",
-    "\n",
-    "def compare(z, cmap, ve=1):\n",
-    "    # Create subplots and hide ticks\n",
-    "    fig, axs = plt.subplots(ncols=2, nrows=2)\n",
-    "    for ax in axs.flat:\n",
-    "        ax.set(xticks=[], yticks=[])\n",
-    "\n",
-    "    # Illuminate the scene from the northwest\n",
-    "    ls = LightSource(azdeg=315, altdeg=45)\n",
-    "\n",
-    "    axs[0, 0].imshow(z, cmap=cmap)\n",
-    "    axs[0, 0].set(xlabel='Colormapped Data')\n",
-    "\n",
-    "    axs[0, 1].imshow(ls.hillshade(z, vert_exag=ve), cmap='gray')\n",
-    "    axs[0, 1].set(xlabel='Illumination Intensity')\n",
-    "\n",
-    "    rgb = ls.shade(z, cmap=cmap, vert_exag=ve, blend_mode='hsv')\n",
-    "    axs[1, 0].imshow(rgb)\n",
-    "    axs[1, 0].set(xlabel='Blend Mode: \"hsv\" (default)')\n",
-    "\n",
-    "    rgb = ls.shade(z, cmap=cmap, vert_exag=ve, blend_mode='overlay')\n",
-    "    axs[1, 1].imshow(rgb)\n",
-    "    axs[1, 1].set(xlabel='Blend Mode: \"overlay\"')\n",
-    "\n",
-    "    return fig\n",
-    "\n",
-    "\n",
-    "if __name__ == '__main__':\n",
-    "    main()"
    ]
   }
  ],
