--- a/Python/Ionplot.ipynb
+++ b/Python/Ionplot.ipynb
@@ -55,15 +55,57 @@
     "plt.rcParams['xtick.direction'] = 'in'\n",
     "plt.rcParams['ytick.direction'] = 'in'\n",
     "from mpl_toolkits.mplot3d import Axes3D\n",
-    "dir='D:\\\\doc\\\\data\\\\ion1test\\\\11400\\\\'\n",
-    "print('Working directory',dir)\n",
-    "print(\"\\n\")\n",
-    "f=open(dir+\"alog.dat\",encoding=\"utf-8\")\n",
-    "print(f.read(1500))\n",
+    "def setlabel(ax, label, loc=2, borderpad=0.6, **kwargs):\n",
+    "    legend = ax.get_legend()\n",
+    "    if legend:\n",
+    "        ax.add_artist(legend)\n",
+    "    line, = ax.plot(numpy.NaN,numpy.NaN,color='none',label=label)\n",
+    "    label_legend = ax.legend(handles=[line],\n",
+    "                             loc=[-0.15,1.001],\n",
+    "                             handlelength=0,\n",
+    "                             handleheight=0,\n",
+    "                             handletextpad=0,\n",
+    "                             borderaxespad=0,\n",
+    "                             borderpad=borderpad,\n",
+    "                             frameon=False,\n",
+    "                             **kwargs)\n",
+    "    label_legend.remove()\n",
+    "    ax.add_artist(label_legend)\n",
+    "    line.remove()\n",
+    "def setlabelm(ax, label, loc, borderpad=0.6, **kwargs):\n",
+    "    legend = ax.get_legend()\n",
+    "    if legend:\n",
+    "        ax.add_artist(legend)\n",
+    "    line, = ax.plot(numpy.NaN,numpy.NaN,color='none',label=label)\n",
+    "    label_legend = ax.legend(handles=[line],\n",
+    "                             loc=loc,\n",
+    "                             handlelength=0,\n",
+    "                             handleheight=0,\n",
+    "                             handletextpad=0,\n",
+    "                             borderaxespad=0,\n",
+    "                             borderpad=borderpad,\n",
+    "                             frameon=False,\n",
+    "                             **kwargs)\n",
+    "    label_legend.remove()\n",
+    "    ax.add_artist(label_legend)\n",
+    "    line.remove()\n",
     "levels=100\n",
     "figureDPI=1200\n",
     "figureType=\"jpeg\"\n",
     "timeUnit=\"fs\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dir='D:\\\\dataofpro\\\\'\n",
+    "print('Working directory',dir)\n",
+    "print(\"\\n\")\n",
+    "f=open(dir+\"alog.dat\",encoding=\"utf-8\")\n",
+    "print(f.read(1500))"
    ]
   },
   {
