--- a/Python/OriPaperPlot.ipynb
+++ b/Python/OriPaperPlot.ipynb
@@ -41,6 +41,41 @@
     "plt.rcParams['xtick.direction'] = 'in'\n",
     "plt.rcParams['ytick.direction'] = 'in'\n",
     "from mpl_toolkits.mplot3d import Axes3D\n",
+    "import numpy\n",
+    "def setlabel(ax, label, loc=2, borderpad=0.6, **kwargs):\n",
+    "    legend = ax.get_legend()\n",
+    "    if legend:\n",
+    "        ax.add_artist(legend)\n",
+    "    line, = ax.plot(numpy.NaN,numpy.NaN,color='none',label=label)\n",
+    "    label_legend = ax.legend(handles=[line],\n",
+    "                             loc=[-0.15,1.001],\n",
+    "                             handlelength=0,\n",
+    "                             handleheight=0,\n",
+    "                             handletextpad=0,\n",
+    "                             borderaxespad=0,\n",
+    "                             borderpad=borderpad,\n",
+    "                             frameon=False,\n",
+    "                             **kwargs)\n",
+    "    label_legend.remove()\n",
+    "    ax.add_artist(label_legend)\n",
+    "    line.remove()\n",
+    "def setlabelm(ax, label, loc, borderpad=0.6, **kwargs):\n",
+    "    legend = ax.get_legend()\n",
+    "    if legend:\n",
+    "        ax.add_artist(legend)\n",
+    "    line, = ax.plot(numpy.NaN,numpy.NaN,color='none',label=label)\n",
+    "    label_legend = ax.legend(handles=[line],\n",
+    "                             loc=loc,\n",
+    "                             handlelength=0,\n",
+    "                             handleheight=0,\n",
+    "                             handletextpad=0,\n",
+    "                             borderaxespad=0,\n",
+    "                             borderpad=borderpad,\n",
+    "                             frameon=False,\n",
+    "                             **kwargs)\n",
+    "    label_legend.remove()\n",
+    "    ax.add_artist(label_legend)\n",
+    "    line.remove()\n",
     "# f=open(dir+\"alog.dat\",encoding=\"utf-8\")\n",
     "# print(f.read(1500))\n",
     "levels=100\n",
@@ -55,7 +90,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dir='D:\\\\dataofpro\\\\'\n",
+    "dir='D:\\\\doc\\\\data\\\\ori\\\\dataforplot\\\\'\n",
     "print('Working directory',dir)\n",
     "print(\"\\n\")"
    ]
@@ -66,18 +101,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.figure(figsize=(16/2.54,6.5*2/2.54))\n",
-    "plt.subplot(2,1,1)\n",
+    "\n",
+    "plt.figure(figsize=(8/2.54,6.5*2/2.54))\n",
+    "ax1=plt.subplot(2,1,1)\n",
     "data=np.loadtxt('F:\\\\doc\\\\ori1\\\\oneHCP\\\\temprature\\\\0\\\\laser.dat')\n",
     "np.savetxt(dir+\"f1laer.dat\",data)\n",
     "x=data[:,0]\n",
     "y=data[:,1]\n",
     "plt.plot(x,y,'k-')\n",
-    "plt.title(\"(a)\",loc='left')\n",
     "plt.xlabel('Time (fs)')\n",
     "plt.ylabel('$E(t)$ (V/m)')\n",
     "plt.xlim(-1500,7500)\n",
-    "plt.subplot(2,1,2)\n",
+    "setlabel(ax1,'(a)')\n",
+    "ax2=plt.subplot(2,1,2)\n",
     "data=np.loadtxt('F:\\\\doc\\\\ori1\\\\oneHCP\\\\temprature\\\\0\\\\p_veq0.dat')\n",
     "\n",
     "np.savetxt(dir+\"f1RotaPop.dat\",data)\n",
@@ -89,8 +125,9 @@
     "y5=data[:,5]\n",
     "y6=data[:,6]\n",
     "plt.plot(x,y1,x,y2,x,y3,x,y4,x,y5,x,y6)\n",
-    "plt.title(\"(b)\",loc='left')\n",
-    "plt.legend(['$|0,0\\\\rangle$','$|0,1\\\\rangle$','$|0,2\\\\rangle$','$|0,3\\\\rangle$','$|0,4\\\\rangle$','$|0,5\\\\rangle$','$|0,6\\\\rangle$'],loc=0)\n",
+    "# plt.text(-0.1,1,\"(b)\")\n",
+    "setlabel(ax2, '(b)')\n",
+    "plt.legend(['$|0,0\\\\rangle$','$|0,1\\\\rangle$','$|0,2\\\\rangle$','$|0,3\\\\rangle$','$|0,4\\\\rangle$','$|0,5\\\\rangle$','$|0,6\\\\rangle$'],loc='upper right',ncol=2)\n",
     "plt.xlim(-1500,7500)\n",
     "plt.xlabel('Time (fs)')\n",
     "plt.ylabel('Population')\n",
@@ -104,8 +141,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.figure(figsize=(16/2.54,6.5*2/2.54))\n",
-    "plt.subplot(2,1,1)\n",
+    "plt.figure(figsize=(8/2.54,6.5*2/2.54))\n",
+    "ax1=plt.subplot(2,1,1)\n",
     "data=np.loadtxt('F:\\\\doc\\\\ori1\\\\oneHCP\\\\temprature\\\\00\\\\cos1.dat')\n",
     "np.savetxt(dir+\"f2Cos.dat\",data)\n",
     "x=data[:,0]-5000\n",
@@ -114,18 +151,20 @@
     "plt.xlabel('Time ('+timeUnit+')')\n",
     "plt.ylabel('$\\\\langle{\\\\rm  cos} \\\\theta \\\\rangle$')\n",
     "plt.plot(x, y1,'k-',x,y2,'r--')\n",
-    "plt.title(\"(a)\",loc='left')\n",
+    "# plt.title(\"(a)\",loc='left')\n",
+    "setlabelm(ax2,'(a)',[-0.1,1.01])\n",
     "plt.xlim(-1500, 7500 )\n",
-    "plt.subplot(2,1,2)\n",
+    "ax2=plt.subplot(2,1,2)\n",
     "data = np.loadtxt('F:\\\\doc\\\\ori1\\\\oneHCP\\\\temprature\\\\0\\\\tap.dat')\n",
     "\n",
     "np.savetxt(dir+\"f2AngWaveDis.dat\",data)\n",
     "x=data[:,0]-5000\n",
     "y=data[:,1]\n",
     "z=data[:,2]\n",
-    "plt.title(\"(b)\",loc='left')\n",
+    "# plt.title(\"(b)\",loc='left')\n",
     "plt.xlim(-1500, 7500 )\n",
     "plt.tricontourf(x,y,z,levels,cmap='jet')\n",
+    "setlabelm(ax2,'(b)',[-0.1,1.01])\n",
     "# plt.colorbar(location='top',aspect='10.0',)\n",
     "plt.xlabel(\"Time (fs)\")\n",
     "plt.ylabel(\"$\\\\theta$ (Degrees)\")\n",
@@ -152,7 +191,8 @@
     "z1=data[:,2]\n",
     "y2=data[:,3]\n",
     "z3=data[:,4]\n",
-    "plt.plot(x,y1,'k-',x,z1,'r-',marker='o')\n",
+    "plt.plot(x,y1,'k-',x,z1,'r-',marker='o',markerfacecolor='r',markersize='3')\n",
+    "plt.legend([\"P\",\"N\"],loc='center right')\n",
     "plt.xlabel('Delay time (fs)')\n",
     "plt.ylabel('$\\\\langle cos \\\\theta\\\\rangle$')\n",
     "plt.savefig(dir+\"f3TwoSameHCPOrimax.\"+figureType,bbox_inches = 'tight',dpi=figureDPI)"
@@ -164,41 +204,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data=np.loadtxt('E:\\\\dataforplot\\\\data\\\\F4.dat')\n",
-    "x=data[:,0]\n",
-    "y1=data[:,1]\n",
-    "y2=data[:,2]\n",
-    "y3=data[:,3]\n",
-    "y4=data[:,4]\n",
-    "y5=data[:,5]\n",
-    "y6=data[:,6]\n",
-    "plt.style.use('_mpl-gallery')\n",
-    "# make data:\n",
-    "np.random.seed(1)\n",
-    "X =x\n",
-    "D = data[:,1:6]\n",
-    "# plot:\n",
-    "fig, ax = plt.subplots()\n",
-    "vp = ax.violinplot(D, X, widths=2,\n",
-    "                   showmeans=False, showmedians=False, showextrema=False)\n",
-    "# styling:\n",
-    "for body in vp['bodies']:\n",
-    "    body.set_alpha(0.9)\n",
-    "# ax.violinplot(D, X)#orientation=\"vertical\", lineoffsets=x)#, linewidth=0.75)\n",
-    "# ax.set(xlim=(0, 8), xticks=np.arange(1, 8),\n",
-    "#        ylim=(0, 8), yticks=np.arange(1, 8))\n",
-    "plt.savefig(dir+\"f4RotaPop.\"+figureType,bbox_inches = 'tight',dpi=figureDPI)\n",
-    "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "\n",
-    "data=np.loadtxt('D:\\\\dataforplot\\\\data\\\\F4.dat')\n",
+    "data=np.loadtxt('D:\\\\doc\\\\data\\\\ori\\\\dataforplot\\\\data\\\\F4.dat')\n",
     "x=data[:,0]\n",
     "y1=data[:,1]\n",
     "y2=data[:,2]\n",
@@ -219,7 +226,7 @@
     "fig, ax = plt.subplots()\n",
     "ax.stackplot(year, population_by_continent.values(),\n",
     "             labels=population_by_continent.keys(), alpha=0.8)\n",
-    "ax.legend(loc='center',bbox_to_anchor=(0.5, 0.07,0.2, 0.2),fontsize=4.5,ncol=1)\n",
+    "ax.legend(loc='center',bbox_to_anchor=(0.05, 0.07,0.2, 0.2),fontsize=4.5,ncol=1)\n",
     "# ax.set_title('World population')\n",
     "ax.set_xlabel('Delay time (fs)')\n",
     "ax.set_ylabel('Population')\n",
@@ -233,46 +240,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data=np.loadtxt('D:\\\\dataforplot\\\\data\\\\F4.dat')\n",
-    "x=data[:,0]\n",
-    "y1=data[:,1]\n",
-    "y2=data[:,2]\n",
-    "y3=data[:,3]\n",
-    "y4=data[:,4]\n",
-    "y5=data[:,5]\n",
-    "y6=data[:,6]\n",
-    "labels =x# ['G1', 'G2', 'G3', 'G4', 'G5']\n",
-    "p1 = [20, 35, 30, 35, 27]\n",
-    "women_means = [25, 32, 34, 20, 25]\n",
-    "men_std = [2, 3, 4, 1, 2]\n",
-    "women_std = [3, 5, 2, 3, 3]\n",
-    "width = 0.1      # the width of the bars: can also be len(x) sequence\n",
-    "\n",
-    "fig, ax = plt.subplots()\n",
-    "\n",
-    "ax.bar(labels, y1, width, label='$|0,0\\\\rangle$')\n",
-    "ax.bar(labels, y2, width, label='$|0,1\\\\rangle$')\n",
-    "ax.bar(labels, y3, width, label='$|0,2\\\\rangle$')\n",
-    "ax.bar(labels, y4, width, label='$|0,3\\\\rangle$')\n",
-    "ax.bar(labels, y5, width, label='$|0,4\\\\rangle$')\n",
-    "ax.bar(labels, y6, width, label='$|0,5\\\\rangle$')\n",
-    "\n",
-    "\n",
-    "ax.set_ylabel('Population')\n",
-    "ax.set_title('Delay time (fs)')\n",
-    "# ax.legend()\n",
-    "\n",
-    "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.figure(figsize=(16/2.54,6.5*2/2.54))\n",
-    "plt.subplot(2,1,1)\n",
+    "plt.figure(figsize=(8/2.54,6.5*2/2.54))\n",
+    "ax1=plt.subplot(2,1,1)\n",
     "data=np.loadtxt('F:\\\\doc\\\\ori1\\\\two_HCP_with_same_direction\\\\0k\\\\245\\\\cos1.dat')\n",
     "np.savetxt(dir+\"f5Cos.dat\",data)\n",
     "x=data[:,0]\n",
@@ -281,16 +250,16 @@
     "plt.xlabel('Time ('+timeUnit+')')\n",
     "plt.ylabel('$\\\\langle{\\\\rm  cos} \\\\theta \\\\rangle$')\n",
     "plt.plot(x, y1,'k-')#,x,y2,'r--')\n",
-    "plt.title(\"(a)\",loc='left')\n",
+    "setlabelm(ax1,'(a)',[-0.2,1.01])\n",
     "plt.xlim(-1500, 7500 )\n",
-    "plt.subplot(2,1,2)\n",
+    "ax2=plt.subplot(2,1,2)\n",
     "data = np.loadtxt('F:\\\\doc\\\\ori1\\\\two_HCP_with_same_direction\\\\0k\\\\245\\\\tap.dat')\n",
     "\n",
     "np.savetxt(dir+\"f5AngWaveDis.dat\",data)\n",
     "x=data[:,0]\n",
     "y=data[:,1]\n",
     "z=data[:,2]\n",
-    "plt.title(\"(b)\",loc='left')\n",
+    "setlabelm(ax2,'(b)',[-0.2,1.01])\n",
     "plt.xlim(-1500, 7500 )\n",
     "plt.tricontourf(x,y,z,levels,cmap='jet')\n",
     "# plt.colorbar(location='top',aspect='10',)\n",
@@ -319,7 +288,8 @@
     "z1=data[:,2]\n",
     "y2=data[:,3]\n",
     "z3=data[:,4]\n",
-    "plt.plot(x,y1,'k-',x,z1,'r-',marker='o')\n",
+    "plt.plot(x,y1,'k-',x,z1,'r-',marker='o',markerfacecolor='r',markersize='3')\n",
+    "plt.legend([\"P\",\"N\"],loc='center right')\n",
     "plt.xlabel('Delay time (fs)')\n",
     "plt.ylabel('$\\\\langle cos \\\\theta\\\\rangle$')\n",
     "plt.savefig(dir+\"f6TwoSameHCPOrimax.\"+figureType,bbox_inches = 'tight',dpi=figureDPI)"
@@ -331,8 +301,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.figure(figsize=(16/2.54,6.5*2/2.54))\n",
-    "plt.subplot(2,1,1)\n",
+    "plt.figure(figsize=(8/2.54,6.5*2/2.54))\n",
+    "ax1=plt.subplot(2,1,1)\n",
     "data=np.loadtxt('F:\\\\doc\\\\ori1\\\\twoHCP\\\\two_oppsite_HCP\\\\245\\\\cos1.dat')\n",
     "np.savetxt(dir+\"f8Cos.dat\",data)\n",
     "x=data[:,0]\n",
@@ -341,9 +311,10 @@
     "plt.xlabel('Time ('+timeUnit+')')\n",
     "plt.ylabel('$\\\\langle{\\\\rm  cos} \\\\theta \\\\rangle$')\n",
     "plt.plot(x, y1,'k-')#,x,y2,'r--')\n",
-    "plt.title(\"(a)\",loc='left')\n",
+    "setlabelm(ax1,'(a)',[-0.2,1.01])\n",
+    "# plt.title(\"(a)\",loc='left')\n",
     "plt.xlim(-1500, 7500 )\n",
-    "plt.subplot(2,1,2)\n",
+    "ax2=plt.subplot(2,1,2)\n",
     "data = np.loadtxt('F:\\\\doc\\\\ori1\\\\two_HCP_with_same_direction\\\\0k\\\\345\\\\tap.dat')\n",
     "\n",
     "np.savetxt(dir+\"f8AngWaveDis.dat\",data)\n",
@@ -351,7 +322,8 @@
     "y=data[:,1]\n",
     "z=data[:,2]\n",
     "\n",
-    "plt.title(\"(b)\",loc='left')\n",
+    "# plt.title(\"(b)\",loc='left')\n",
+    "setlabelm(ax2,'(b)',[-0.2,1.01])\n",
     "plt.xlim(-1500, 7500 )\n",
     "plt.tricontourf(x,y,z,levels,cmap='jet')\n",
     "# plt.colorbar(location='top',aspect='10',)\n",
@@ -381,17 +353,19 @@
     "z1=data[:,2]\n",
     "z2=data[:,3]\n",
     "s1=plt.subplot(1,2,1)\n",
-    "plt.title('(a)',loc='left')\n",
+    "# plt.title('(a)',loc='left')\n",
     "plt.tricontourf(x,y,z1,levels,cmap='jet')\n",
     "plt.ylabel(\"Delay time (fs)\")\n",
     "plt.xlabel(\"$T$ (K)\")\n",
+    "setlabelm(s1,'(a)',[-0.3,1.01])\n",
     "plt.colorbar()\n",
     "s2=plt.subplot(1,2,2)\n",
-    "plt.title('(b)',loc='left')\n",
+    "# plt.title('(b)',loc='left')\n",
     "plt.tricontourf(x,y,z2,100,cmap='jet')\n",
     "plt.ylabel(\"Delay time (fs)\")\n",
     "plt.xlabel(\"$T$ (K)\")\n",
     "plt.colorbar()\n",
+    "setlabelm(s2,'(b)',[-0.3,1.01])\n",
     "#(s1,s2).colorbar() \n",
     "plt.subplots_adjust(left=0.125,\n",
     "                    bottom=0.1, \n",
@@ -402,25 +376,11 @@
     "plt.savefig(dir+\"f12TmpTimOri.\"+figureType,bbox_inches = 'tight',dpi=figureDPI)\n",
     "plt.show()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.5 64-bit (windows store)",
+   "display_name": "Python 3.9.0 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -434,12 +394,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.9.0"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "8687b81b5d14307c58608bd19c9f92d9c321847991efa868faf2d3a3bcd23c46"
+    "hash": "5addf786bcd861d1ce5006f23111f8cbb206731e5b61b0a5632ba9e0252558a8"
    }
   }
  },
