--- a/Python/IonPaperPlot.ipynb
+++ b/Python/IonPaperPlot.ipynb
@@ -177,8 +177,8 @@
     "plt.figure(figsize=((16/2.54),(13/2)))\n",
     "#plt.figure(figsize=(8,6))\n",
     "titleLoc=\"left\"\n",
-    "plt.subplot(2,2,1)\n",
-    "plt.title(\"(a)\",loc=titleLoc)\n",
+    "ax1=plt.subplot(2,2,1)\n",
+    "setlabel(ax1,'(a)')\n",
     "data=np.loadtxt(intDir+\"TimFreDis4.dat\")\n",
     "np.savetxt(dir+\"data\\\\f3(1).dat\",data,fmt=\"%.9f\")\n",
     "x=data[:,0]\n",
@@ -188,8 +188,8 @@
     "plt.ylabel(\"Frequency (a.u.)\")\n",
     "plt.tricontourf(x,y,z,100,cmap='jet')\n",
     "#plt.colorbar()\n",
-    "plt.subplot(2,2,2)\n",
-    "plt.title(\"(b)\",loc=titleLoc)\n",
+    "ax2=plt.subplot(2,2,2)\n",
+    "setlabel(ax2,'(b)')\n",
     "data1=np.loadtxt(intDir+\"FreDis1.dat\")\n",
     "data2=np.loadtxt(intDir+\"FreDis2.dat\")\n",
     "data3=np.loadtxt(intDir+\"FreDis3.dat\")\n",
@@ -212,7 +212,7 @@
     "#plt.legend([\"pump1\",\"pump2\",\"probe\"],loc=(0.55,0.7))\n",
     "plt.legend([\"pump\",\"probe\"],loc=(0.6,0.1))\n",
     "#plt.legend([\"P 1\",\"P 2\",\"P 3\"],loc=legengLoc)\n",
-    "plt.subplot(2,2,3)\n",
+    "ax3=plt.subplot(2,2,3)\n",
     "data=np.loadtxt(intDir+\"Laser.dat\")\n",
     "np.savetxt(dir+\"data\\\\f3(34).dat\",data,fmt=\"%.9f\")\n",
     "x=data[:,0]\n",
@@ -220,15 +220,15 @@
     "y2=data[:,5]\n",
     "y3=data[:,6]\n",
     "plt.xlim(min(x),max(x))\n",
-    "plt.title(\"(c)\",loc=titleLoc)\n",
+    "setlabel(ax3,'(c)')\n",
     "plt.plot(x,y1,'k-',x,y2,'r--',x,-y1,'k-',x,-y2,'r--',x,y3,'b-.',x,-y3,'b-.')\n",
     "plt.xlabel(\"Time (fs)\")\n",
     "plt.ylabel(\"Intensity (a.u.)\")\n",
     "# plt.legend([\"pump1\",\"pump2\",\"probe\"],loc=legengLoc)\n",
     "plt.legend([\"pump\",\"probe\"],loc=legengLoc)\n",
     "#plt.legend([\"P 1\",\"P 2\",\"P 3\"],loc=legengLoc)\n",
-    "plt.subplot(2,2,4)\n",
-    "plt.title(\"(d)\",loc=titleLoc)\n",
+    "ax4=plt.subplot(2,2,4)\n",
+    "setlabel(ax4,'(d)')\n",
     "data=np.loadtxt(intDir+\"Laser.dat\")\n",
     "x1=data[:,0]\n",
     "y1=data[:,1]\n",
@@ -310,7 +310,7 @@
     "im=ax.tricontourf(x,y,z,levels,cmap='jet')\n",
     "plt.colorbar(im)\n",
     "plt.yticks([90,180,270])\n",
-    "plt.title(\"(a)\",loc='left')\n",
+    "setlabel(ax,'(d)')\n",
     "ax = fig.add_subplot(gs[0,1])\n",
     "data=np.loadtxt('D:\\\\doc\\\\data\\\\ion1test\\\\all\\\\GroAngWave.dat')\n",
     "np.savetxt(dir+\"data\\\\f5(2).dat\",data,fmt=\"%.9f\")\n",
@@ -322,7 +322,7 @@
     "im=ax.tricontourf(x,y,z,levels,cmap='jet')\n",
     "plt.colorbar(im)\n",
     "plt.yticks([90,180,270])\n",
-    "plt.title(\"(e)\",loc='left')\n",
+    "setlabel(ax,'(e)')\n",
     "ax = fig.add_subplot(gs[1, 0])\n",
     "data1=np.loadtxt('D:\\\\doc\\\\data\\\\ion1test\\\\NoAli\\\\ExcAngWave.dat')\n",
     "np.savetxt(dir+\"data\\\\f5(3).dat\",data1,fmt=\"%.9f\")\n",
@@ -335,7 +335,7 @@
     "plt.yticks([90,180,270])\n",
     "im=ax.tricontourf(x,y,z,levels,cmap='jet')\n",
     "plt.colorbar(im)\n",
-    "plt.title(\"(b)\",loc='left')\n",
+    "setlabel(ax,'(b)')\n",
     "plt.xlabel(\"Time (fs)\")\n",
     "plt.ylabel(\"$\\\\theta$ (degrees)\")\n",
     "# for tick in ax.get_yticklabels():\n",
@@ -352,7 +352,7 @@
     "plt.yticks([90,180,270])\n",
     "im=ax.tricontourf(x,y,z,levels,cmap='jet')\n",
     "plt.colorbar(im)\n",
-    "plt.title(\"(f)\",loc='left')\n",
+    "setlabel(ax,'(f)')\n",
     "plt.xlabel(\"Time (fs)\")\n",
     "plt.ylabel(\"$\\\\theta$ (degrees)\")\n",
     "# for tick in ax.get_yticklabels():\n",
@@ -365,7 +365,7 @@
     "y2=data[:,2]\n",
     "y3=1-y1-y2\n",
     "plt.plot(x,y1,'k-',x,y2,'r-',x,y3,'b-')\n",
-    "plt.title(\"(c)\",loc='left')\n",
+    "setlabel(ax,'(c)')\n",
     "plt.xlim(1620,1680)\n",
     "plt.legend([\"Gro\",\"Exc\",\"Ion\"],loc=(0.7,0.65))\n",
     "plt.xlabel(\"Time (\"+timeUnit+\")\")\n",
@@ -378,7 +378,7 @@
     "y2=data[:,2]\n",
     "y3=1-y1-y2\n",
     "plt.plot(x,y1,'k-',x,y2,'r-',x,y3,'b-')\n",
-    "plt.title(\"(g)\",loc='left')\n",
+    "setlabel(ax,'(g)')\n",
     "plt.xlim(1620,1680)\n",
     "plt.legend([\"Gro\",\"Exc\",\"Ion\"],loc=(0.7,0.65))\n",
     "plt.xlabel(\"Time (\"+timeUnit+\")\")\n",
@@ -395,7 +395,7 @@
     "# plt.xlim(-5, 5)\n",
     "plt.ylim(-0.009, 0.15)\n",
     "plt.plot(x1,y1,'k')\n",
-    "plt.title(\"(d)\",loc='left')\n",
+    "setlabel(ax,'(d)')\n",
     "plt.text(0.2*(max(x)-min(x)),0.8*(max(y)-min(y)),'(1+1)-REMPI')\n",
     "plt.text(0.5*(max(x)-min(x)),0.2*(max(y)-min(y)),'(1+2)-REMPI')\n",
     "#interpolation='spline16'\n",
@@ -413,7 +413,7 @@
     "# plt.xlim(-5, 5)\n",
     "plt.ylim(-0.009, 0.15)\n",
     "plt.plot(x1,y1,'k')\n",
-    "plt.title(\"(h)\",loc='left')\n",
+    "setlabel(ax,'(h)')\n",
     "plt.text(0.2*(max(x)-min(x)),0.8*(max(y)-min(y)),'(1+1)-REMPI')\n",
     "plt.text(0.5*(max(x)-min(x)),0.2*(max(y)-min(y)),'(1+2)-REMPI')\n",
     "#interpolation='spline16'\n",
@@ -464,7 +464,7 @@
    "source": [
     "fig = plt.figure(tight_layout=True,figsize=(cm2inch(8*2),cm2inch(6.5*2)))\n",
     "intDir=\"D:\\\\doc\\\\data\\\\onepump\\\\onepump200\\\\\"\n",
-    "plt.subplot(2,1,1)\n",
+    "ax=plt.subplot(2,1,1)\n",
     "data=np.loadtxt(intDir+\"excradwave.dat\")\n",
     "np.savetxt(dir+\"data\\\\f7(1).dat\",data,fmt=\"%.9f\")\n",
     "x=data[:,0]\n",
@@ -474,10 +474,10 @@
     "plt.ylabel(\"$R$ (a.u.)\")\n",
     "plt.tricontourf(x,y,z,levels,cmap='jet')\n",
     "plt.colorbar()\n",
-    "plt.title(\"(a)\",loc='left')\n",
+    "setlabel(ax,'(a)')\n",
     "# plt.xlim(0,150)\n",
     "plt.ylim(min(y),10)\n",
-    "plt.subplot(2,1,2)\n",
+    "ax=plt.subplot(2,1,2)\n",
     "data=np.loadtxt(intDir+'ktot.dat')\n",
     "np.savetxt(dir+\"data\\\\f7(2).dat\",data,fmt=\"%.9f\")\n",
     "x=data[:,0]\n",
@@ -489,7 +489,7 @@
     "\n",
     "plt.tricontourf(x,y,z2,levels,cmap='jet')\n",
     "plt.colorbar()\n",
-    "plt.title('(b)',loc='left')\n",
+    "setlabel(ax,'(b)')\n",
     "plt.xlabel('Time (fs)')\n",
     "plt.ylabel('Momentum (arb.units)')\n",
     "plt.savefig(dir+'f7pumpExcRadWave.'+figureType,bbox_inches = 'tight',dpi=figureDPI)"
@@ -505,20 +505,20 @@
     "titleLoc=\"left\"\n",
     "dir=\"D:\\\\doc\\\\data\\\\ion1test\\\\delayPumpAndProbe\\\\21\\\\\"\n",
     "\n",
-    "plt.subplot(4,2,1)\n",
+    "ax=plt.subplot(4,2,1)\n",
     "data =np.loadtxt(dir+\"ExcRadWave.dat\")\n",
     "#plt.style.use('_mpl-gallery-nogrid')\n",
     "x=data[:,0]\n",
     "y=data[:,1]\n",
     "z=data[:,2]\n",
-    "plt.title(\"(a)\",loc=titleLoc)\n",
+    "setlabel(ax,'(a)')\n",
     "#plt.xlim(TimeTurn,TimeEnd)\n",
     "plt.ylim(1.75,10.0)\n",
     "plt.tricontourf(x,y,z,levels,cmap='jet')\n",
     "plt.colorbar()\n",
     "plt.xlabel(\"Time (\"+timeUnit+\")\")\n",
     "plt.ylabel(\"$R$ (a.u.)\")\n",
-    "plt.subplot(4,2,2)\n",
+    "ax=plt.subplot(4,2,2)\n",
     "data =np.loadtxt(dir+\"IonRadWave.dat\")\n",
     "#plt.style.use('_mpl-gallery-nogrid')\n",
     "x=data[:,0]\n",
@@ -526,7 +526,7 @@
     "z=data[:,2]\n",
     "#plt.xlim(TimeTurn,TimeEnd)\n",
     "plt.ylim(1.75,10.0)\n",
-    "plt.title(\"(e)\",loc=titleLoc)\n",
+    "setlabel(ax,'(e)')\n",
     "plt.tricontourf(x,y,z,levels,cmap='jet')\n",
     "plt.colorbar()\n",
     "plt.xlabel(\"Time (\"+timeUnit+\")\")\n",
@@ -534,20 +534,20 @@
     "\n",
     "dir=\"D:\\\\doc\\\\data\\\\ion1test\\\\delayPumpAndProbe\\\\42\\\\\"\n",
     "#plt.figure(figsize=(12,6))\n",
-    "plt.subplot(4,2,3)\n",
+    "ax=plt.subplot(4,2,3)\n",
     "data =np.loadtxt(dir+\"ExcRadWave.dat\")\n",
     "#plt.style.use('_mpl-gallery-nogrid')\n",
     "x=data[:,0]\n",
     "y=data[:,1]\n",
     "z=data[:,2]\n",
-    "plt.title(\"(b)\",loc=titleLoc)\n",
+    "setlabel(ax,'(b)')\n",
     "#plt.xlim(TimeTurn,TimeEnd)\n",
     "plt.ylim(1.75,10.0)\n",
     "plt.tricontourf(x,y,z,levels,cmap='jet')\n",
     "plt.colorbar()\n",
     "plt.xlabel(\"Time (\"+timeUnit+\")\")\n",
     "plt.ylabel(\"$R$ (a.u.)\")\n",
-    "plt.subplot(4,2,4)\n",
+    "ax=plt.subplot(4,2,4)\n",
     "data =np.loadtxt(dir+\"IonRadWave.dat\")\n",
     "#plt.style.use('_mpl-gallery-nogrid')\n",
     "x=data[:,0]\n",
@@ -555,7 +555,7 @@
     "z=data[:,2]\n",
     "#plt.xlim(TimeTurn,TimeEnd)\n",
     "plt.ylim(1.75,10.0)\n",
-    "plt.title(\"(f)\",loc=titleLoc)\n",
+    "setlabel(ax,'(f)')\n",
     "plt.tricontourf(x,y,z,levels,cmap='jet')\n",
     "plt.colorbar()\n",
     "plt.xlabel(\"Time (\"+timeUnit+\")\")\n",
@@ -563,20 +563,20 @@
     "\n",
     "dir=\"D:\\\\doc\\\\data\\\\ion1test\\\\delayPumpAndProbe\\\\63\\\\\"\n",
     "#plt.figure(figsize=(12,6))\n",
-    "plt.subplot(4,2,5)\n",
+    "ax=plt.subplot(4,2,5)\n",
     "data =np.loadtxt(dir+\"ExcRadWave.dat\")\n",
     "#plt.style.use('_mpl-gallery-nogrid')\n",
     "x=data[:,0]\n",
     "y=data[:,1]\n",
     "z=data[:,2]\n",
-    "plt.title(\"(c)\",loc=titleLoc)\n",
+    "setlabel(ax,'(c)')\n",
     "#plt.xlim(TimeTurn,TimeEnd)\n",
     "plt.ylim(1.75,10.0)\n",
     "plt.tricontourf(x,y,z,levels,cmap='jet')\n",
     "plt.colorbar()\n",
     "plt.xlabel(\"Time (\"+timeUnit+\")\")\n",
     "plt.ylabel(\"$R$ (a.u.)\")\n",
-    "plt.subplot(4,2,6)\n",
+    "ax=plt.subplot(4,2,6)\n",
     "data =np.loadtxt(dir+\"IonRadWave.dat\")\n",
     "#plt.style.use('_mpl-gallery-nogrid')\n",
     "x=data[:,0]\n",
@@ -584,7 +584,7 @@
     "z=data[:,2]\n",
     "#plt.xlim(TimeTurn,TimeEnd)\n",
     "plt.ylim(1.75,10.0)\n",
-    "plt.title(\"(g)\",loc=titleLoc)\n",
+    "setlabel(ax,'(g)')\n",
     "plt.tricontourf(x,y,z,levels,cmap='jet')\n",
     "plt.colorbar()\n",
     "plt.xlabel(\"Time (\"+timeUnit+\")\")\n",
@@ -593,20 +593,20 @@
     "\n",
     "dir=\"D:\\\\doc\\\\data\\\\ion1test\\\\delayPumpAndProbe\\\\84\\\\\"\n",
     "#plt.figure(figsize=(12,6))\n",
-    "plt.subplot(4,2,7)\n",
+    "ax=plt.subplot(4,2,7)\n",
     "data =np.loadtxt(dir+\"ExcRadWave.dat\")\n",
     "#plt.style.use('_mpl-gallery-nogrid')\n",
     "x=data[:,0]\n",
     "y=data[:,1]\n",
     "z=data[:,2]\n",
-    "plt.title(\"(d)\",loc=titleLoc)\n",
+    "setlabel(ax,'(d)')\n",
     "#plt.xlim(TimeTurn,TimeEnd)\n",
     "plt.ylim(1.75,10.0)\n",
     "plt.tricontourf(x,y,z,levels,cmap='jet')\n",
     "plt.colorbar()\n",
     "plt.xlabel(\"Time (\"+timeUnit+\")\")\n",
     "plt.ylabel(\"$R$ (a.u.)\")\n",
-    "plt.subplot(4,2,8)\n",
+    "ax=plt.subplot(4,2,8)\n",
     "data =np.loadtxt(dir+\"IonRadWave.dat\")\n",
     "#plt.style.use('_mpl-gallery-nogrid')\n",
     "x=data[:,0]\n",
@@ -614,7 +614,7 @@
     "z=data[:,2]\n",
     "#plt.xlim(TimeTurn,TimeEnd)\n",
     "plt.ylim(1.75,10.0)\n",
-    "plt.title(\"(h)\",loc=titleLoc)\n",
+    "setlabel(ax,'(h)')\n",
     "plt.tricontourf(x,y,z,levels,cmap='jet')\n",
     "plt.colorbar()\n",
     "plt.xlabel(\"Time (\"+timeUnit+\")\")\n",
@@ -647,7 +647,7 @@
     "y3=1-y1-y2\n",
     "print('$P_{ion}$ = ',y3[-1])\n",
     "plt.plot(x,y1,'k-',x,y2,'r--',x,y3,'b-.')\n",
-    "plt.title(\"(a)\",loc='left')\n",
+    "setlabel(ax,'(a)')\n",
     "# plt.xlim(1620,1680)\n",
     "plt.legend([\"Gro\",\"Exc\",\"Ion\"],loc=(0.7,0.65))\n",
     "plt.xlabel(\"Time (\"+timeUnit+\")\")\n",
@@ -660,7 +660,7 @@
     "y3=1-y1-y2\n",
     "print('$P_{ion}$ = ',y3[-1])\n",
     "plt.plot(x,y1,'k-',x,y2,'r--',x,y3,'b-.')\n",
-    "plt.title(\"(b)\",loc='left')\n",
+    "setlabel(ax,'(b)')\n",
     "# plt.xlim(1620,1680)\n",
     "plt.legend([\"Gro\",\"Exc\",\"Ion\"],loc=(0.7,0.65))\n",
     "plt.xlabel(\"Time (\"+timeUnit+\")\")\n",
@@ -673,7 +673,7 @@
     "y3=1-y1-y2\n",
     "print('$P_{ion}$ = ',y3[-1])\n",
     "plt.plot(x,y1,'k-',x,y2,'r--',x,y3,'b-.')\n",
-    "plt.title(\"(c)\",loc='left')\n",
+    "setlabel(ax,'(c)')\n",
     "#plt.xlim(1620,1680)\n",
     "plt.legend([\"Gro\",\"Exc\",\"Ion\"],loc=(0.7,0.65))\n",
     "plt.xlabel(\"Time (\"+timeUnit+\")\")\n",
@@ -686,7 +686,7 @@
     "y3=1-y1-y2\n",
     "print('$P_{ion}$ = ',y3[-1])\n",
     "plt.plot(x,y1,'k-',x,y2,'r--',x,y3,'b-.')\n",
-    "plt.title(\"(d)\",loc='left')\n",
+    "setlabel(ax,'(d)')\n",
     "#plt.xlim(1620,1680)\n",
     "plt.legend([\"Gro\",\"Exc\",\"Ion\"],loc=(0.7,0.65))\n",
     "plt.xlabel(\"Time (\"+timeUnit+\")\")\n",
@@ -702,7 +702,7 @@
     "y1=interpolate.interp1d(x,y,kind='cubic')(x1)\n",
     "plt.ylim(-0.009, 0.12)\n",
     "plt.plot(x1,y1,'k')\n",
-    "plt.title(\"(e)\",loc='left')\n",
+    "setlabel(ax,'(e)')\n",
     "#plt.text(0.3*(max(x)-min(x)),0.5*(max(y)-min(y)),'(0+2)-REMPI')\n",
     "plt.text(0.2*(max(x)-min(x)),0.8*(max(y)-min(y)),'(1+1)-REMPI')\n",
     "plt.text(0.6*(max(x)-min(x)),0.1*(max(y)-min(y)),'(1+2)-REMPI')\n",
@@ -719,7 +719,7 @@
     "y1=interpolate.interp1d(x,y,kind='cubic')(x1)\n",
     "plt.ylim(-0.009, 0.12)\n",
     "plt.plot(x1,y1,'k')\n",
-    "plt.title(\"(f)\",loc='left')\n",
+    "setlabel(ax,'(f)')\n",
     "plt.text(0.2*(max(x)-min(x)),0.9*(max(y)-min(y)),'(1+1)-REMPI')\n",
     "plt.text(0.6*(max(x)-min(x)),0.6*(max(y)-min(y)),'(1+2)-REMPI')\n",
     "plt.xlabel(\"Energy (eV)\")\n",
@@ -735,7 +735,7 @@
     "y1=interpolate.interp1d(x,y,kind='cubic')(x1)\n",
     "plt.ylim(-0.009, 0.12)\n",
     "plt.plot(x1,y1,'k')\n",
-    "plt.title(\"(g)\",loc='left')\n",
+    "setlabel(ax,'(g)')\n",
     "plt.text(0.2*(max(x)-min(x)),0.8*(max(y)-min(y)),'(1+1)-REMPI')\n",
     "plt.text(0.6*(max(x)-min(x)),0.2*(max(y)-min(y)),'(1+2)-REMPI')\n",
     "plt.xlabel(\"Energy (eV)\")\n",
@@ -751,7 +751,7 @@
     "y1=interpolate.interp1d(x,y,kind='cubic')(x1)\n",
     "plt.ylim(-0.009, 0.12)\n",
     "plt.plot(x1,y1,'k')\n",
-    "plt.title(\"(h)\",loc='left')\n",
+    "setlabel(ax,'(h)')\n",
     "plt.text(0.2*(max(x)-min(x)),0.8*(max(y)-min(y)),'(1+1)-REMPI')\n",
     "plt.text(0.6*(max(x)-min(x)),0.3*(max(y)-min(y)),'(1+2)-REMPI')\n",
     "plt.xlabel(\"Energy (eV)\")\n",
@@ -798,6 +798,15 @@
    "outputs": [],
    "source": [
     "os.startfile(dir)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "stop"
    ]
   },
   {
@@ -1165,7 +1174,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.0 64-bit",
+   "display_name": "Python 3.10.6 64-bit (windows store)",
    "language": "python",
    "name": "python3"
   },
@@ -1179,12 +1188,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.0"
+   "version": "3.10.6"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "5addf786bcd861d1ce5006f23111f8cbb206731e5b61b0a5632ba9e0252558a8"
+    "hash": "8687b81b5d14307c58608bd19c9f92d9c321847991efa868faf2d3a3bcd23c46"
    }
   }
  },
