--- a/Python/Ionplot.ipynb
+++ b/Python/Ionplot.ipynb
@@ -101,7 +101,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dir='D:\\\\dataofpro\\\\'\n",
+    "dir='D:\\\\dataofpro\\\\20110\\\\'\n",
     "print('Working directory',dir)\n",
     "print(\"\\n\")\n",
     "f=open(dir+\"alog.dat\",encoding=\"utf-8\")\n",
@@ -306,13 +306,6 @@
     "plt.tight_layout()\n",
     "#plt.savefig(dir+\"PotentialEnergyAndDipoleMent.\"+figureType,bbox_inches = 'tight',dpi=figureDPI)\n",
     "plt.show()\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Plot orientation and alignment of the groud state"
    ]
   },
   {
@@ -719,6 +712,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##  Plot orientation and alignment of the groud state"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -961,12 +961,41 @@
     "fig, ax = plt.subplots()\n",
     "ax.stackplot(t, population_by_continent.values(),\n",
     "             labels=population_by_continent.keys(), alpha=1)\n",
-    "ax.legend(loc='upper left')\n",
+    "ax.legend(loc=0)\n",
     "#ax.set_title('World population')\n",
     "ax.set_xlabel('Time (fs)')\n",
     "ax.set_ylabel('Energy (a.u.)')\n",
     "\n",
     "plt.savefig(outDir+'EnergyRJVion.'+figureType,bbox_inches ='tight',dpi=figureDPI)\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "data1=np.loadtxt(dir+'eneTRJVgro.dat')\n",
+    "data2=np.loadtxt(dir+'eneTRJVexc.dat')\n",
+    "data3=np.loadtxt(dir+'eneTRJVion.dat')\n",
+    "t = data[:,0]\n",
+    "outDir=dir\n",
+    "population_by_continent = {\n",
+    "    'Translation': data1[:,1]+data2[:,1]+data3[:,1],\n",
+    "    'Rotation':  data1[:,2]+data2[:,2]+data3[:,2],\n",
+    "    'Vibration':  data1[:,3]+data2[:,3]+data3[:,3],\n",
+    "}\n",
+    "fig, ax = plt.subplots()\n",
+    "ax.stackplot(t, population_by_continent.values(),\n",
+    "             labels=population_by_continent.keys(), alpha=1)\n",
+    "ax.legend(loc=0)\n",
+    "#ax.set_title('World population')\n",
+    "ax.set_xlabel('Time (fs)')\n",
+    "ax.set_ylabel('Energy (a.u.)')\n",
+    "\n",
+    "plt.savefig(outDir+'EnergyRJVtot.'+figureType,bbox_inches ='tight',dpi=figureDPI)\n",
     "plt.show()"
    ]
   },
@@ -1729,7 +1758,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.0 64-bit",
+   "display_name": "Python 3.10.6 64-bit (windows store)",
    "language": "python",
    "name": "python3"
   },
@@ -1743,12 +1772,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.0"
+   "version": "3.10.6"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "5addf786bcd861d1ce5006f23111f8cbb206731e5b61b0a5632ba9e0252558a8"
+    "hash": "8687b81b5d14307c58608bd19c9f92d9c321847991efa868faf2d3a3bcd23c46"
    }
   }
  },
