--- a/Python/Ionplot.ipynb
+++ b/Python/Ionplot.ipynb
@@ -55,6 +55,7 @@
     "plt.rcParams['xtick.direction'] = 'in'\n",
     "plt.rcParams['ytick.direction'] = 'in'\n",
     "from mpl_toolkits.mplot3d import Axes3D\n",
+    "import numpy \n",
     "def setlabel(ax, label, loc=2, borderpad=0.6, **kwargs):\n",
     "    legend = ax.get_legend()\n",
     "    if legend:\n",
@@ -101,7 +102,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dir='D:\\\\dataofpro\\\\20110\\\\'\n",
+    "dir='D:\\\\dataofpro\\\\'\n",
     "print('Working directory',dir)\n",
     "print(\"\\n\")\n",
     "f=open(dir+\"alog.dat\",encoding=\"utf-8\")\n",
@@ -270,8 +271,8 @@
    "outputs": [],
    "source": [
     "\n",
-    "plt.figure(figsize=(cm_to_inch(16),cm_to_inch(13)))\n",
-    "plt.subplot(1,2,1)\n",
+    "plt.figure(figsize=(cm_to_inch(8),cm_to_inch(13)))\n",
+    "ax=plt.subplot(2,1,1)\n",
     "\n",
     "if os.path.exists(dir+\"pott.dat\"):\n",
     "    data=np.loadtxt(dir+\"Pott.dat\")\n",
@@ -285,12 +286,15 @@
     "#plt.grid(False)\n",
     "x=x\n",
     "y=y3\n",
-    "plt.text(min(x)+(max(x)-min(x))*0.9,min(y)+(max(y)-min(y))*0.95,\"(a)\")\n",
+    "setlabel(ax,'(a)')\n",
     "plt.xlabel('$\\\\textit{R}$ (a.u.)')\n",
     "plt.ylabel(\"Intensity (a.u.)\")\n",
     "plt.plot(x,y1,'k-',x,y2,'r-.',x,y3,'b--')\n",
-    "plt.legend(['$X^1\\Sigma^+$','$A^1 \\Sigma ^+$','$X^2 \\Sigma ^+$'],loc=(0.55,0.8))\n",
-    "plt.subplot(1,2,2)\n",
+    "plt.xlim(1.75,11)\n",
+    "plt.fill_between(x,y3,x,y3+0.2)\n",
+    "plt.ylim(-0.05,0.5)\n",
+    "plt.legend(['$X^1\\Sigma^+$','$A^1 \\Sigma ^+$','$X^2 \\Sigma ^+$'],loc=0)\n",
+    "ax=plt.subplot(2,1,2)\n",
     "if os.path.exists(dir+\"Dipole.dat\"):\n",
     "    data=np.loadtxt(dir+\"Dipole.dat\")\n",
     "else:\n",
@@ -298,11 +302,12 @@
     "\n",
     "x=data[:,0]\n",
     "y=data[:,2]\n",
-    "plt.text(min(x)+(max(x)-min(x))*0.9,min(y)+(max(y)-min(y))*0.95,\"(b)\")\n",
+    "setlabel(ax,'(b)')\n",
     "plt.xlabel(\"$\\\\textit{R}$  (a.u.)\")\n",
-    "plt.ylabel(\"Intensity (a.u.)\")\n",
+    "plt.ylabel(\"Intensity (D)\")\n",
     "plt.plot(data[:,0],data[:,1],'k-',data[:,0],data[:,2],'r-.',data[:,0],data[:,3],'b--')\n",
-    "plt.legend([\"$\\mu_{X^1\\Sigma^+ - X^1\\Sigma^+} $\",\"$\\mu_{A^1\\Sigma^+ - A^1\\Sigma^+} $\",\"$\\mu_{A^1\\Sigma^+ - X^2\\Sigma^+} $\"],loc=(0.4,0.08))\n",
+    "plt.xlim(1.75,11)\n",
+    "plt.legend([\"$\\mu_{X^1\\Sigma^+ - X^1\\Sigma^+} $\",\"$\\mu_{A^1\\Sigma^+ - A^1\\Sigma^+} $\",\"$\\mu_{A^1\\Sigma^+ - X^2\\Sigma^+} $\"],loc=0)\n",
     "plt.tight_layout()\n",
     "#plt.savefig(dir+\"PotentialEnergyAndDipoleMent.\"+figureType,bbox_inches = 'tight',dpi=figureDPI)\n",
     "plt.show()\n"
