--- a/Python/FigureForTwoPump.ipynb
+++ b/Python/FigureForTwoPump.ipynb
@@ -130,6 +130,29 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
+    "for i in range(0,8,1):\n",
+    "    print(i)\n",
+    "    workdir='D:\\\\doc\\\\data\\\\ion1test\\\\twopump\\\\20'+str(i*10+30)+'\\\\PopulationOfState.dat'\n",
+    "    data=np.loadtxt('D:\\\\doc\\\\data\\\\ion1test\\\\twopump\\\\20'+str(i*10+30)+'\\\\PopulationOfState.dat')\n",
+    "    x[i]=i*10+30\n",
+    "    l=len(data[:,1])\n",
+    "    y1[i]=(max(data[1500:1900,1]))\n",
+    "    print(y1[i])\n",
+    "    y2[i]=max(data[int(l*3/4):l-1,2])\n",
+    "    y3[i]=max(data[int(l*3/4):l-1,3])\n",
+    "   \n",
+    "plt.plot(x[0:8],y2[0:8])\n",
+    "plt.legend([\"Gro\",\"Exc\",\"Ion\"],loc=0)\n",
+    "     "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "plt.figure(figsize=(16/2.54,6.5/2.54))\n",
     "#intDir=\"D:\\\\doc\\\\data\\\\ion1test\\\\twoPump\\\\2060100\\\\\"\n",
     "plt.subplot(1,2,1)\n",
