--- a/Python/IonPaperPlot.ipynb
+++ b/Python/IonPaperPlot.ipynb
@@ -116,6 +116,7 @@
     "plt.figure(figsize=(cm2inch(12),cm2inch(12)))\n",
     "ax=plt.subplot(2,1,1)\n",
     "data=np.loadtxt(intDir+\"PotentialEnergy.dat\")\n",
+    "np.savetxt(dir+\"data\\\\f1(1)PotentialEnergy.dat\",data)\n",
     "x=data[:,0]\n",
     "y1=data[:,1]\n",
     "y2=data[:,2]\n",
@@ -130,10 +131,10 @@
     "plt.xlim(1.75,11)\n",
     "plt.fill_between(x,y3,x,y3+0.2)\n",
     "plt.ylim(-0.05,0.5)\n",
-    "plt.legend(['$X^1\\Sigma^+$','$A^1 \\Sigma ^+$','$X^2 \\Sigma ^+$'],loc=(0.8,0.65))\n",
+    "plt.legend(['$X^1\\\\Sigma^+$','$A^1 \\\\Sigma ^+$','$X^2 \\\\Sigma ^+$'],loc=(0.8,0.65))\n",
     "ax=plt.subplot(2,1,2)\n",
     "data=np.loadtxt(intDir+\"DipoleMoment.dat\")\n",
-    "\n",
+    "np.savetxt(dir+\"data\\\\f1(2)PotentialEnergy.dat\",data)\n",
     "x=data[:,0]\n",
     "y=data[:,2]\n",
     "setlabelm(ax,'(b)',[-0.1,1.001])\n",
@@ -141,7 +142,7 @@
     "plt.ylabel(\"Intensity (D)\")\n",
     "plt.plot(data[:,0],data[:,1],'k-',data[:,0],data[:,2],'r-.',data[:,0],data[:,3],'b--')\n",
     "plt.xlim(1.75,11)\n",
-    "plt.legend([\"$\\mu_{XX} $\",\"$\\mu_{AA} $\",\"$\\mu_{XA} $\"],loc=(0.65,0.05))\n",
+    "plt.legend([\"$\\\\mu_{XX} $\",\"$\\\\mu_{AA} $\",\"$\\\\mu_{XA} $\"],loc=(0.65,0.05))\n",
     "plt.tight_layout()\n",
     "#plt.savefig(dir+\"PotentialEnergyAndDipoleMent.\"+figureType,bbox_inches = 'tight',dpi=figureDPI)\n",
     "plt.savefig(dir+\"picture\\\\f1potDip.\"+figureType,bbox_inches=\"tight\",transparent=True,dpi=figureDPI)\n",
@@ -489,6 +490,7 @@
     "#y5=fc(x1)\n",
     "color='tab:red'\n",
     "plt.plot(x,y,color=color,marker=\"o\",markersize='5')\n",
+    "plt.ylim(0,1)\n",
     "color = 'tab:blue'\n",
     "#plt.plot(x1,y1,'--',color=color,marker=\".\")#,x1,y2,x1,y3,x1,y4,x1,y5)\n",
     "#plt.legend([\"Origin\"])#,\"nearest\",\"zero\",\"slinear\",\"quadratic\",\"cubic\"])\n",
@@ -647,69 +649,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig = plt.figure(tight_layout=True,figsize=(cm2inch(8*2),cm2inch(6.5*3)))\n",
-    "intDir=\"D:\\\\doc\\\\data\\\\onepump\\\\onepump200\\\\\"\n",
-    "ax=plt.subplot(3,1,1)\n",
-    "data=np.loadtxt(intDir+\"excradwave.dat\")\n",
-    "np.savetxt(dir+\"data\\\\f7(1).dat\",data,fmt=\"%.9f\")\n",
-    "x=data[:,0]\n",
-    "y=data[:,1]\n",
-    "z=data[:,2]\n",
-    "plt.xlabel(\"Time (fs)\")\n",
-    "plt.ylabel(\"$R$ (a.u.)\")\n",
-    "plt.tricontourf(x,y,z,levels,cmap='jet')\n",
-    "plt.colorbar(pad=0.01,location='top')\n",
-    "setlabelm(ax,'(a)',[-0.1,1.001])\n",
-    "# plt.xlim(0,150)\n",
-    "plt.ylim(min(y),10)\n",
-    "ax=plt.subplot(3,1,2)\n",
-    "data=np.loadtxt(intDir+'ktot.dat')\n",
-    "np.savetxt(dir+\"data\\\\f7(2).dat\",data,fmt=\"%.9f\")\n",
-    "x=data[:,0]\n",
-    "y=data[:,1]\n",
-    "z1=data[:,2]\n",
-    "z2=data[:,3]\n",
-    "z3=data[:,4]\n",
-    "z4=z1+z2+z3\n",
-    "\n",
-    "plt.tricontourf(x,y,z2,levels,cmap='jet')\n",
-    "plt.colorbar(pad=0.015,location='top')\n",
-    "setlabelm(ax,'(b)',[-0.1,1.001])\n",
-    "plt.xlabel('Time (fs)')\n",
-    "plt.ylabel('Momentum (arb.units)')\n",
-    "ax=plt.subplot(3,1,3)\n",
-    "\n",
-    "data=np.loadtxt('D:\\\\doc\\\\data\\\\onePump\\\\onepump200\\\\eneTRJVexc.dat')\n",
-    "t = data[:,0]\n",
-    "population_by_continent = {\n",
-    "    'Translation': data[:,1],\n",
-    "    'Rotation':    data[:,2],\n",
-    "    'Vibration':   data[:,3],\n",
-    "}\n",
-    "ax.stackplot(t, population_by_continent.values(),\n",
-    "             labels=population_by_continent.keys(), alpha=1)\n",
-    "ax.legend(loc='best', bbox_to_anchor=(0.51, 0.9, 0.1, 0.1))\n",
-    "#ax.set_title('World population')\n",
-    "ax.set_xlabel('Time (fs)')\n",
-    "ax.set_ylabel('Energy (a.u.)')\n",
-    "# plt.colorbar(pad=0.01,visible=False)\n",
-    "plt.xlim(min(t),max(t))\n",
-    "setlabelm(ax,'(c)',[-0.1,1.001])\n",
-    "plt.subplots_adjust(left=0.125,\n",
-    "                    bottom=0.1, \n",
-    "                    right=0.9, \n",
-    "                    top=0.9, \n",
-    "                    wspace=0.3, \n",
-    "                    hspace=0.35)\n",
-    "plt.savefig(dir+'picture\\\\f7pumpExcRadWave.'+figureType,bbox_inches = 'tight',dpi=figureDPI)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "plt.figure(figsize=(16/2.54,24/2.54))\n",
     "titleLoc=\"left\"\n",
     "intDir=\"D:\\\\doc\\\\data\\\\ion1test\\\\delayPumpAndProbe\\\\21\\\\\"\n",
@@ -843,6 +782,70 @@
     "                    wspace=0.25, \n",
     "                    hspace=0.35)\n",
     "plt.savefig(dir+\"picture\\\\f8ExcIonRad.\"+figureType,bbox_inches=\"tight\",transparent=True,dpi=figureDPI)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig = plt.figure(tight_layout=True,figsize=(cm2inch(8*2),cm2inch(6.5*3)))\n",
+    "intDir=\"D:\\\\doc\\\\data\\\\onepump\\\\onepump200\\\\\"\n",
+    "ax=plt.subplot(3,1,1)\n",
+    "data=np.loadtxt(intDir+\"excradwave.dat\")\n",
+    "np.savetxt(dir+\"data\\\\f9(1).dat\",data,fmt=\"%.9f\")\n",
+    "x=data[:,0]\n",
+    "y=data[:,1]\n",
+    "z=data[:,2]\n",
+    "plt.xlabel(\"Time (fs)\")\n",
+    "plt.ylabel(\"$R$ (a.u.)\")\n",
+    "plt.tricontourf(x,y,z,levels,cmap='jet')\n",
+    "plt.colorbar(pad=0.01,location='top')\n",
+    "setlabelm(ax,'(a)',[-0.1,1.001])\n",
+    "# plt.xlim(0,150)\n",
+    "plt.ylim(min(y),10)\n",
+    "ax=plt.subplot(3,1,2)\n",
+    "data=np.loadtxt(intDir+'ktot.dat')\n",
+    "np.savetxt(dir+\"data\\\\f9(2).dat\",data,fmt=\"%.9f\")\n",
+    "x=data[:,0]\n",
+    "y=data[:,1]\n",
+    "z1=data[:,2]\n",
+    "z2=data[:,3]\n",
+    "z3=data[:,4]\n",
+    "z4=z1+z2+z3\n",
+    "\n",
+    "plt.tricontourf(x,y,z2,levels,cmap='jet')\n",
+    "plt.colorbar(pad=0.015,location='top')\n",
+    "setlabelm(ax,'(b)',[-0.1,1.001])\n",
+    "plt.xlabel('Time (fs)')\n",
+    "plt.ylabel('Momentum (arb.units)')\n",
+    "ax=plt.subplot(3,1,3)\n",
+    "\n",
+    "data=np.loadtxt('D:\\\\doc\\\\data\\\\onePump\\\\onepump200\\\\eneTRJVexc.dat')\n",
+    "np.savetxt(dir+\"data\\\\f9(3).dat\",data,fmt=\"%.9f\")\n",
+    "t = data[:,0]\n",
+    "population_by_continent = {\n",
+    "    'Translation': data[:,1],\n",
+    "    'Rotation':    data[:,2],\n",
+    "    'Vibration':   data[:,3],\n",
+    "}\n",
+    "ax.stackplot(t, population_by_continent.values(),\n",
+    "             labels=population_by_continent.keys(), alpha=1)\n",
+    "ax.legend(loc='best', bbox_to_anchor=(0.51, 0.9, 0.1, 0.1))\n",
+    "#ax.set_title('World population')\n",
+    "ax.set_xlabel('Time (fs)')\n",
+    "ax.set_ylabel('Energy (a.u.)')\n",
+    "# plt.colorbar(pad=0.01,visible=False)\n",
+    "plt.xlim(min(t),max(t))\n",
+    "setlabelm(ax,'(c)',[-0.1,1.001])\n",
+    "plt.subplots_adjust(left=0.125,\n",
+    "                    bottom=0.1, \n",
+    "                    right=0.9, \n",
+    "                    top=0.9, \n",
+    "                    wspace=0.3, \n",
+    "                    hspace=0.35)\n",
+    "plt.savefig(dir+'picture\\\\f9pumpExcRadWave.'+figureType,bbox_inches = 'tight',dpi=figureDPI)"
    ]
   },
   {
