--- a/Python/IonPaperPlot.ipynb
+++ b/Python/IonPaperPlot.ipynb
@@ -189,12 +189,12 @@
     "data=np.loadtxt(\"D:\\\\doc\\\\data\\\\ion1test\\\\alilong\\\\GroAngWave.dat\")\n",
     "np.savetxt(dir+\"data\\\\f2(4).dat\",data,fmt=\"%.9f\")\n",
     "x=data[:,0]\n",
-    "y=data[:,1]\n",
+    "y=data[:,1]/180\n",
     "z=data[:,2]\n",
     "plt.tricontourf(x,y,z,levels,cmap='jet')\n",
     "plt.xlim(min(x),5000)\n",
     "plt.xlabel(\"Time (fs)\")\n",
-    "plt.ylabel(\"$\\\\theta$ (degrees)\")\n",
+    "plt.ylabel(\"$\\\\theta$ ($\\\\pi$)\")\n",
     "plt.subplots_adjust(left=0.125,\n",
     "                    bottom=0.1, \n",
     "                    right=0.9, \n",
@@ -470,33 +470,54 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data=np.loadtxt('D:\\\\doc\\\\data\\\\ion1testold\\\\DifferentDelatTimeOfPumpAndProbe\\\\pop.dat')\n",
-    "np.savetxt(dir+\"data\\\\f6.dat\",data,fmt=\"%.9f\")\n",
-    "from scipy import interpolate\n",
-    "x=data[:,0]\n",
-    "y=data[:,1]\n",
-    "x1=np.arange(10,151,1)\n",
-    "print(len(x1))\n",
-    "# fn=interpolate.interp1d(x,y,kind='nearest')\n",
-    "# fz=interpolate.interp1d(x,y,kind='zero')\n",
-    "# fs=interpolate.interp1d(x,y,kind='slinear')\n",
-    "# fq=interpolate.interp1d(x,y,kind='quadratic')\n",
-    "fc=interpolate.interp1d(x,y,kind='cubic')\n",
-    "#method of kind: nearest, zero, slinear, quadratic,cubic\n",
-    "y1=fc(x1)\n",
-    "# y2=fz(x1)\n",
-    "# y3=fs(x1)\n",
-    "# y4=fq(x1)\n",
-    "#y5=fc(x1)\n",
-    "color='tab:red'\n",
-    "plt.plot(x,y,color=color,marker=\"o\",markersize='5')\n",
-    "plt.ylim(0,1)\n",
-    "color = 'tab:blue'\n",
-    "#plt.plot(x1,y1,'--',color=color,marker=\".\")#,x1,y2,x1,y3,x1,y4,x1,y5)\n",
-    "#plt.legend([\"Origin\"])#,\"nearest\",\"zero\",\"slinear\",\"quadratic\",\"cubic\"])\n",
+    "\n",
+    "# data=np.loadtxt('D:\\\\doc\\\\data\\\\ion1testold\\\\DifferentDelatTimeOfPumpAndProbe\\\\pop.dat')\n",
+    "# np.savetxt(dir+\"data\\\\f6.dat\",data,fmt=\"%.9f\")\n",
+    "# from scipy import interpolate\n",
+    "# x=data[:,0]\n",
+    "# y=data[:,1]\n",
+    "# x1=np.arange(10,151,1)\n",
+    "# print(len(x1))\n",
+    "# # fn=interpolate.interp1d(x,y,kind='nearest')\n",
+    "# # fz=interpolate.interp1d(x,y,kind='zero')\n",
+    "# # fs=interpolate.interp1d(x,y,kind='slinear')\n",
+    "# # fq=interpolate.interp1d(x,y,kind='quadratic')\n",
+    "# fc=interpolate.interp1d(x,y,kind='cubic')\n",
+    "# #method of kind: nearest, zero, slinear, quadratic,cubic\n",
+    "# y1=fc(x1)\n",
+    "# # y2=fz(x1)\n",
+    "# # y3=fs(x1)\n",
+    "# # y4=fq(x1)\n",
+    "# #y5=fc(x1)\n",
+    "# color='tab:red'\n",
+    "# plt.plot(x,y,color=color,marker=\"o\",markersize='5')\n",
+    "# plt.ylim(0,1)\n",
+    "# color = 'tab:blue'\n",
+    "# #plt.plot(x1,y1,'--',color=color,marker=\".\")#,x1,y2,x1,y3,x1,y4,x1,y5)\n",
+    "# #plt.legend([\"Origin\"])#,\"nearest\",\"zero\",\"slinear\",\"quadratic\",\"cubic\"])\n",
+    "# plt.xlabel(\"$t_{\\\\rm{pp}}$ (fs)\")\n",
+    "# plt.ylabel(\"Ionization probability\")\n",
+    "# plt.savefig(dir+\"picture\\\\f6pop.\"+figureType,bbox_inches=\"tight\",dpi=figureDPI)\n",
+    "t=[]\n",
+    "p=[]\n",
+    "tp=[[]for i in range(2)]\n",
+    "for i in range(10,180,5):\n",
+    "    data=np.loadtxt('D:\\\\doc\\\\data\\\\ion1test\\\\delay\\\\'+str(i)+'\\\\populationofstate.dat')\n",
+    "    x=data[:,0]\n",
+    "    y1=data[:,1]\n",
+    "    y2=data[:,2]\n",
+    "    y3=data[:,3]\n",
+    "    print(i)\n",
+    "    t.append(i)\n",
+    "    tp[0].append(i)\n",
+    "    tp[1].append(max(y3))\n",
+    "    p.append(max(y3))\n",
+    "plt.plot(tp[0],tp[1],'k-',marker='o',markerfacecolor='r',markersize='5')\n",
+    "plt.ylim(-0.17,1.05)\n",
     "plt.xlabel(\"$t_{\\\\rm{pp}}$ (fs)\")\n",
     "plt.ylabel(\"Ionization probability\")\n",
-    "plt.savefig(dir+\"picture\\\\f6pop.\"+figureType,bbox_inches=\"tight\",dpi=figureDPI)"
+    "plt.savefig('D:\\\\doc\\\\data\\\\ion\\\\picture\\\\f6pop.'+figureType,bbox_inches = 'tight',dpi=figureDPI)\n",
+    "np.savetxt('D:\\\\doc\\\\data\\\\ion\\\\data\\\\f6PopDelay.dat',tp)"
    ]
   },
   {
@@ -665,6 +686,10 @@
     "plt.ylim(1.75,10.0)\n",
     "plt.tricontourf(x,y,z,levels,cmap='jet')\n",
     "plt.colorbar()\n",
+    "# data=np.loadtxt(dir+\"data\\\\f1(2)PotentialEnergy.dat\")\n",
+    "# x=data[:,0]\n",
+    "# y=data[:,3]\n",
+    "# plt.plot(y,-x)\n",
     "plt.xlabel(\"Time (\"+timeUnit+\")\")\n",
     "plt.ylabel(\"$R$ (a.u.)\")\n",
     "ax=plt.subplot(4,2,2)\n",
@@ -1265,7 +1290,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.6 64-bit (windows store)",
+   "display_name": "Python 3.9.0 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -1279,12 +1304,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.9.0"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "8687b81b5d14307c58608bd19c9f92d9c321847991efa868faf2d3a3bcd23c46"
+    "hash": "5addf786bcd861d1ce5006f23111f8cbb206731e5b61b0a5632ba9e0252558a8"
    }
   }
  },
