--- a/Python/OriPaperPlot.ipynb
+++ b/Python/OriPaperPlot.ipynb
@@ -80,7 +80,7 @@
     "# print(f.read(1500))\n",
     "levels=100\n",
     "figureDPI=1200\n",
-    "figureType=\"jpeg\"\n",
+    "figureType=\"jpg\"\n",
     "timeUnit=\"fs\""
    ]
   },
@@ -127,7 +127,7 @@
     "plt.plot(x,y1,x,y2,x,y3,x,y4,x,y5,x,y6)\n",
     "# plt.text(-0.1,1,\"(b)\")\n",
     "setlabel(ax2, '(b)')\n",
-    "plt.legend(['$|0,0\\\\rangle$','$|0,1\\\\rangle$','$|0,2\\\\rangle$','$|0,3\\\\rangle$','$|0,4\\\\rangle$','$|0,5\\\\rangle$','$|0,6\\\\rangle$'],loc='upper right',ncol=2)\n",
+    "plt.legend(['$|0,0\\\\rangle$','$|0,1\\\\rangle$','$|0,2\\\\rangle$','$|0,3\\\\rangle$','$|0,4\\\\rangle$','$|0,5\\\\rangle$','$|0,6\\\\rangle$'],loc=(0.6,0.7),ncol=2)\n",
     "plt.xlim(-1500,7500)\n",
     "plt.xlabel('Time (fs)')\n",
     "plt.ylabel('Population')\n",
