--- a/Python/FigureForTwoPump.ipynb
+++ b/Python/FigureForTwoPump.ipynb
@@ -69,7 +69,112 @@
     "figureDPI=1200\n",
     "figureType=\"jpeg\"\n",
     "timeUnit=\"fs\"\n",
-    "outDir='D:\\\\doc\\\\data\\\\twoPump\\\\'"
+    "dir='D:\\\\doc\\\\data\\\\twoPump\\\\'\n",
+    "outDir='D:\\\\doc\\\\data\\\\twoPump\\\\picture'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "intDir=\"D:\\\\doc\\\\data\\\\twopump\\\\molecularData\\\\\"\n",
+    "\n",
+    "plt.figure(figsize=(cm2inch(12),cm2inch(12)))\n",
+    "ax=plt.subplot(2,1,1)\n",
+    "data=np.loadtxt(intDir+\"PotentialEnergy.dat\")\n",
+    "np.savetxt(dir+\"data\\\\f1(1)PotentialEnergy.dat\",data)\n",
+    "x=data[:,0]\n",
+    "y1=data[:,1]\n",
+    "y2=data[:,2]\n",
+    "y3=data[:,3]\n",
+    "#plt.grid(False)\n",
+    "x=x\n",
+    "y=y3\n",
+    "setlabelm(ax,'(a)',[-0.1,1.001])\n",
+    "plt.xlabel('$\\\\textit{R}$ (a.u.)')\n",
+    "plt.ylabel(\"Intensity (a.u.)\")\n",
+    "plt.plot(x,y1,'k-',x,y2,'r-.',x,y3,'b--')\n",
+    "plt.xlim(1.75,11)\n",
+    "plt.fill_between(x,y3,x,y3+0.2)\n",
+    "plt.ylim(-0.05,0.5)\n",
+    "plt.legend(['$X^1\\\\Sigma^+$','$A^1 \\\\Sigma ^+$','$X^2 \\\\Sigma ^+$'],loc=(0.8,0.65))\n",
+    "ax=plt.subplot(2,1,2)\n",
+    "data=np.loadtxt(intDir+\"DipoleMoment.dat\")\n",
+    "np.savetxt(dir+\"data\\\\f1(2)PotentialEnergy.dat\",data)\n",
+    "x=data[:,0]\n",
+    "y=data[:,2]\n",
+    "setlabelm(ax,'(b)',[-0.1,1.001])\n",
+    "plt.xlabel(\"$\\\\textit{R}$  (a.u.)\")\n",
+    "plt.ylabel(\"Intensity (D)\")\n",
+    "plt.plot(data[:,0],data[:,1],'k-',data[:,0],data[:,2],'r-.',data[:,0],data[:,3],'b--')\n",
+    "plt.xlim(1.75,11)\n",
+    "plt.legend([\"$\\\\mu_{XX} $\",\"$\\\\mu_{AA} $\",\"$\\\\mu_{XA} $\"],loc=(0.65,0.05))\n",
+    "plt.tight_layout()\n",
+    "#plt.savefig(dir+\"PotentialEnergyAndDipoleMent.\"+figureType,bbox_inches = 'tight',dpi=figureDPI)\n",
+    "plt.savefig(dir+\"picture\\\\f1potDip.\"+figureType,bbox_inches=\"tight\",transparent=True,dpi=figureDPI)\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.figure(figsize=(16/2.54,13/2.54))\n",
+    "ax1=plt.subplot(2,2,1)\n",
+    "data=np.loadtxt(\"D:\\\\doc\\\\data\\\\onePump\\\\onepump1\\\\laser.dat\")\n",
+    "x=data[:,0]\n",
+    "y=data[:,2]\n",
+    "# plt.xlim(0,5000)\n",
+    "plt.plot(x,y,'k')\n",
+    "plt.xlabel('Time (fs)')\n",
+    "plt.ylabel('Intensity (V/m)')\n",
+    "setlabel(ax1,'(a)')\n",
+    "np.savetxt(dir+\"data\\\\f2(12).dat\",data,fmt=\"%.9f\")\n",
+    "ax3=plt.subplot(2,2,3)\n",
+    "data=np.loadtxt(\"D:\\\\doc\\\\data\\\\onePump\\\\onepump1\\\\populationofstate.dat\")\n",
+    "np.savetxt(dir+\"data\\\\f2(3).dat\",data,fmt=\"%.9f\")\n",
+    "x=data[:,0]\n",
+    "y1=data[:,1]\n",
+    "y2=data[:,2]\n",
+    "y3=1-y1-y2\n",
+    "plt.plot(x,y1,'k-',x,y2,'r--',x,y3,'b-.')\n",
+    "# plt.xlim(1620,1680)\n",
+    "plt.legend([\"$p_{gro}(t)$\",\"$p_{exc}(t)$\",\"$p_{ion}(t)$\"],loc=(0.65,0.7))\n",
+    "plt.xlabel(\"Time (\"+timeUnit+\")\")\n",
+    "plt.ylabel(\"Population\")\n",
+    "setlabel(ax3,'(c)')\n",
+    "plt.xlabel('Time (fs)')\n",
+    "plt.ylabel('$\\\\langle\\\\rm{cos^2}\\\\theta\\\\rangle$')\n",
+    "ax2=plt.subplot(2,2,2)\n",
+    "setlabel(ax2,'(b)')\n",
+    "x=[0,1,2,3,4,5]\n",
+    "y=[ 0.21807067543956959,0.58789061452344060,0.17765944533726921,1.5804301297742095E-002, 4.9711941976089170E-004,5.4991865364745232E-006]\n",
+    "plt.bar(x, y)\n",
+    "plt.xlabel('Rotational quantum number $J$')\n",
+    "plt.ylabel('Population')\n",
+    "plt.xticks([0,1,2,3,4,5])\n",
+    "ax4=plt.subplot(2,2,4)\n",
+    "setlabel(ax4,'(d)')\n",
+    "data=np.loadtxt(\"D:\\\\doc\\\\data\\\\onePump\\\\onepump1\\\\ExcradWave.dat\")\n",
+    "np.savetxt(dir+\"data\\\\f2(4).dat\",data,fmt=\"%.9f\")\n",
+    "x=data[:,0]\n",
+    "y=data[:,1]/180\n",
+    "z=data[:,2]\n",
+    "plt.tricontourf(x,y,z,levels,cmap='jet')\n",
+    "# plt.xlim(min(x),5000)\n",
+    "plt.xlabel(\"Time (fs)\")\n",
+    "plt.ylabel(\"$\\\\theta$ ($\\\\pi$)\")\n",
+    "plt.subplots_adjust(left=0.125,\n",
+    "                    bottom=0.1, \n",
+    "                    right=0.9, \n",
+    "                    top=0.9, \n",
+    "                    wspace=0.3, \n",
+    "                    hspace=0.3)\n",
+    "plt.savefig(dir+'picture\\\\f2.'+figureType,bbox_inches ='tight',dpi=figureDPI)\n"
    ]
   },
   {
@@ -130,19 +235,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
+    "tp=[[]for i in range(4)]\n",
     "for i in range(0,8,1):\n",
     "    print(i)\n",
     "    workdir='D:\\\\doc\\\\data\\\\ion1test\\\\twopump\\\\20'+str(i*10+30)+'\\\\PopulationOfState.dat'\n",
     "    data=np.loadtxt('D:\\\\doc\\\\data\\\\ion1test\\\\twopump\\\\20'+str(i*10+30)+'\\\\PopulationOfState.dat')\n",
-    "    x[i]=i*10+30\n",
+    "    # x[i]=i*10+30\n",
+    "    tp[0].append(i*10+30)\n",
     "    l=len(data[:,1])\n",
-    "    y1[i]=(max(data[1500:1900,1]))\n",
-    "    print(y1[i])\n",
-    "    y2[i]=max(data[int(l*3/4):l-1,2])\n",
-    "    y3[i]=max(data[int(l*3/4):l-1,3])\n",
+    "    tp[1].append(max(data[1500:1900,1]))\n",
+    "    tp[2].append(max(data[int(l*3/4):l-1,2]))\n",
+    "    tp[3].append(max(data[int(l*3/4):l-1,3]))\n",
     "   \n",
-    "plt.plot(x[0:8],y2[0:8])\n",
+    "plt.plot(tp[0],tp[2])\n",
     "plt.legend([\"Gro\",\"Exc\",\"Ion\"],loc=0)\n",
     "     "
    ]
