--- a/Python/orientation3d.ipynb
+++ b/Python/orientation3d.ipynb
@@ -47,8 +47,48 @@
     "x=data[:,0]\n",
     "y=data[:,1]\n",
     "z=data[:,2]\n",
-    "ax1.scatter3D(x,y,z,cmap=\"Blues\",s=0.2,)\n",
-    "plt.plot3d(x,y,z)"
+    "# ax1.scatter3D(x,y,z,cmap=\"Blues\",s=0.2,)\n",
+    "plt.tricontour(x,y,z,levels,cmap=\"jet\")\n",
+    "# plt.plot3d(x,y,z)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "from matplotlib import cm\n",
+    "from matplotlib.ticker import LinearLocator\n",
+    "import numpy as np\n",
+    "\n",
+    "fig, ax = plt.subplots(subplot_kw={\"projection\": \"3d\"})\n",
+    "data=np.loadtxt(dir+\"Laser.dat\")\n",
+    "x=data[:,0]\n",
+    "y=data[:,1]\n",
+    "z=data[:,2]\n",
+    "# Make data.\n",
+    "X = x\n",
+    "Y = y\n",
+    "X, Y = np.meshgrid(x, y)\n",
+    "\n",
+    "Z =z\n",
+    "\n",
+    "# Plot the surface.\n",
+    "surf = ax.plot_surface(X, Y, Z, cmap=cm.coolwarm,\n",
+    "                       linewidth=0, antialiased=False)\n",
+    "\n",
+    "# Customize the z axis.\n",
+    "ax.set_zlim(-1.01, 1.01)\n",
+    "ax.zaxis.set_major_locator(LinearLocator(10))\n",
+    "# A StrMethodFormatter is used automatically\n",
+    "ax.zaxis.set_major_formatter('{x:.02f}')\n",
+    "\n",
+    "# Add a color bar which maps values to colors.\n",
+    "fig.colorbar(surf, shrink=0.5, aspect=5)\n",
+    "\n",
+    "plt.show()"
    ]
   },
   {
