--- a/Python/LIMAOPlot.ipynb
+++ b/Python/LIMAOPlot.ipynb
@@ -41,7 +41,7 @@
     "plt.rcParams['xtick.direction'] = 'in'\n",
     "plt.rcParams['ytick.direction'] = 'in'\n",
     "from mpl_toolkits.mplot3d import Axes3D\n",
-    "dir='D:\\\\dataofpro\\\\'\n",
+    "dir='D:\\\\dataofpro\\\\intensity\\\\09132102\\\\'\n",
     "print('Working directory',dir)\n",
     "print(\"\\n\")\n",
     "levels=100\n",
