--- a/Python/IonPaperPlot.ipynb
+++ b/Python/IonPaperPlot.ipynb
@@ -470,6 +470,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "data="
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "\n",
     "# data=np.loadtxt('D:\\\\doc\\\\data\\\\ion1testold\\\\DifferentDelatTimeOfPumpAndProbe\\\\pop.dat')\n",
     "# np.savetxt(dir+\"data\\\\f6.dat\",data,fmt=\"%.9f\")\n",
@@ -509,7 +518,7 @@
     "    y3=data[:,3]\n",
     "    print(i)\n",
     "    t.append(i)\n",
-    "    tp[0].append(i)\n",
+    "    tp[0].append(i) \n",
     "    tp[1].append(max(y3))\n",
     "    p.append(max(y3))\n",
     "plt.plot(tp[0],tp[1],'k-',marker='o',markerfacecolor='r',markersize='5')\n",
