--- a/Python/FigureForTwoPump.ipynb
+++ b/Python/FigureForTwoPump.ipynb
@@ -458,7 +458,8 @@
     "                    top=0.9, \n",
     "                    wspace=0.3, \n",
     "                    hspace=0.35)\n",
-    "plt.savefig(outDir+'picture\\\\f7popenetgy.'+figureType,bbox_inches = 'tight',dpi=figureDPI)"
+    "plt.savefig(outDir+'picture\\\\f7popenetgy.'+figureType,bbox_inches = 'tight',dpi=figureDPI)\n",
+    "plt.show()"
    ]
   },
   {
@@ -510,7 +511,7 @@
     "plt.plot(x,y1,'k-',x,y2,'r--',x,y3,'b-.')\n",
     "setlabel(ax,'(c)')\n",
     "#plt.xlim(1620,1680)\n",
-    "plt.legend([\"$p_{gro}(t)$\",\"$p_{exc}(t)$\",\"$p_{ion}(t)$\"],loc=(0.65,0.7))\n",
+    "plt.legend([\"$p_{gro}(t)$\",\"$p_{exc}(t)$\",\"$p_{ion}(t)$\"],loc=(0.25,0.7))\n",
     "plt.xlabel(\"Time (\"+timeUnit+\")\")\n",
     "plt.ylabel(\"Population\")\n",
     "ax = fig.add_subplot(gs[3,0])\n",
@@ -602,7 +603,8 @@
     "                    top=0.9, \n",
     "                    wspace=0.3, \n",
     "                    hspace=0.35)\n",
-    "plt.savefig(outDir+'picture\\\\f71popenetgy.'+figureType,bbox_inches = 'tight',dpi=figureDPI)"
+    "plt.savefig(outDir+'picture\\\\f71popenetgy.'+figureType,bbox_inches = 'tight',dpi=figureDPI)\n",
+    "plt.show()"
    ]
   },
   {
