--- a/Python/IonPaperPlot.ipynb
+++ b/Python/IonPaperPlot.ipynb
@@ -940,6 +940,57 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "plt.figure(figsize=(16,13*2))\n",
+    "leg=[]\n",
+    "intDir='D:\\\\doc\\\\data\\\\ion1test\\\\delay\\\\'\n",
+    "plt.subplot(3,1,1)\n",
+    "for i in range(21,331):\n",
+    "    if os.path.exists(intDir+str(i)+'\\\\PopulationOfState.dat'): \n",
+    "        print(intDir+str(i)+'\\\\PopulationOfState.dat')\n",
+    "        data=np.loadtxt(intDir+str(i)+'\\\\PopulationOfState.dat')\n",
+    "        x=data[:,0]\n",
+    "        y1=data[:,1]\n",
+    "        y2=data[:,2]\n",
+    "        y3=data[:,3]\n",
+    "        plt.plot(x,y1,'-')#,x,y3,'--')\n",
+    "        leg.append(\"$P_{Gro}(t_{\\\\rm{pp}}=$\"+str(i)+\"\\\\quad fs)\")\n",
+    "        # leg.append(\"$P_{ion}(t_{\\\\rm{pp}}=$\"+str(i)+\"\\\\quad fs)\")\n",
+    "plt.legend(leg,loc=0)\n",
+    "plt.subplot(3,1,2)\n",
+    "for i in range(21,331):\n",
+    "    if os.path.exists(intDir+str(i)+'\\\\PopulationOfState.dat'): \n",
+    "        print(intDir+str(i)+'\\\\PopulationOfState.dat')\n",
+    "        data=np.loadtxt(intDir+str(i)+'\\\\PopulationOfState.dat')\n",
+    "        x=data[:,0]\n",
+    "        y1=data[:,1]\n",
+    "        y2=data[:,2]\n",
+    "        y3=data[:,3]\n",
+    "        plt.plot(x,y2,'-')#,x,y3,'--')\n",
+    "        leg.append(\"$P_{Exc}(t_{\\\\rm{pp}}=$\"+str(i)+\"\\\\quad fs)\")\n",
+    "        # leg.append(\"$P_{ion}(t_{\\\\rm{pp}}=$\"+str(i)+\"\\\\quad fs)\")\n",
+    "plt.legend(leg,loc=0)\n",
+    "plt.subplot(3,1,3)\n",
+    "for i in range(21,331):\n",
+    "    if os.path.exists(intDir+str(i)+'\\\\PopulationOfState.dat'): \n",
+    "        print(intDir+str(i)+'\\\\PopulationOfState.dat')\n",
+    "        data=np.loadtxt(intDir+str(i)+'\\\\PopulationOfState.dat')\n",
+    "        x=data[:,0]\n",
+    "        y1=data[:,1]\n",
+    "        y2=data[:,2]\n",
+    "        y3=data[:,3]\n",
+    "        plt.plot(x,y3,'--')\n",
+    "        # leg.append(\"$P_{exc}(t_{\\\\rm{pp}}=$\"+str(i)+\"\\\\quad fs)\")\n",
+    "        leg.append(\"$P_{Ion}(t_{\\\\rm{pp}}=$\"+str(i)+\"\\\\quad fs)\")\n",
+    "plt.legend(leg,loc=0)\n",
+    "plt.savefig(dir+\"picture\\\\fpoptot.\"+figureType,bbox_inches=\"tight\",transparent=True,dpi=figureDPI)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "plt.figure(figsize=(16/2.54,6.5/2.54))\n",
     "\n",
     "plt.subplot(1,2,1)\n",
