--- a/Python/FigureForTwoPump.ipynb
+++ b/Python/FigureForTwoPump.ipynb
@@ -947,7 +947,7 @@
     "plt.ylabel('Momentum (arb.units)')\n",
     "ax=plt.subplot(3,1,3)\n",
     "\n",
-    "data=np.loadtxt(intDir+'eneTRJV.dat')\n",
+    "data=np.loadtxt('D:\\\\doc\\\\data\\\\ion1test\\\\twopump\\\\2060\\\\eneTRJVexc.dat')\n",
     "np.savetxt(outDir+\"data\\\\f9(3).dat\",data,fmt=\"%.9f\")\n",
     "t = data[:,0]\n",
     "population_by_continent = {\n",
@@ -1042,8 +1042,7 @@
     "    tp[1].append(max(data[1500:1900,1]))\n",
     "    tp[2].append(max(data[int(l*3/4):l-1,2]))\n",
     "    tp[3].append(max(data[int(l*3/4):l-1,3]))\n",
-    "   \n",
-    "plt(tp[0],tp[1],tp[0],tp[2],tp[0],tp[3])\n",
+    "plt.plot(tp[0],tp[1],tp[0],tp[2],tp[0],tp[3])\n",
     "plt.legend([\"Gro\",\"Exc\",\"Ion\"],loc=0)\n",
     "     "
    ]
@@ -1055,7 +1054,7 @@
    "outputs": [],
    "source": [
     "plt.figure(figsize=(16/2.54,6.5/2.54))\n",
-    "#intDir=\"D:\\\\doc\\\\data\\\\ion1test\\\\twoPump\\\\2060100\\\\\"\n",
+    "intDir=\"D:\\\\doc\\\\data\\\\ion1test\\\\twoPump\\\\2060100\\\\\"\n",
     "plt.subplot(1,2,1)\n",
     "data =np.loadtxt(intDir+\"absang.dat\")\n",
     "#DataAng=scipy.ndimage.zoom(DataAng,1)\n",
@@ -1140,7 +1139,7 @@
     "x=data[:,0]\n",
     "y=data[:,1]\n",
     "z=data[:,2]\n",
-    "setlabel3(ax,'(a)')\n",
+    "setlabel(ax,'(a)')\n",
     "#plt.xlim(TimeTurn,TimeEnd)\n",
     "plt.ylim(1.75,10.0)\n",
     "plt.tricontourf(x,y,z,levels,cmap='jet')\n",
@@ -1160,7 +1159,7 @@
     "z=data[:,2]\n",
     "#plt.xlim(TimeTurn,TimeEnd)\n",
     "plt.ylim(1.75,10.0)\n",
-    "setlabel3(ax,'(e)')\n",
+    "setlabel(ax,'(e)')\n",
     "plt.tricontourf(x,y,z,levels,cmap='jet')\n",
     "plt.colorbar()\n",
     "plt.xlabel(\"Time (\"+timeUnit+\")\")\n",
@@ -1175,7 +1174,7 @@
     "x=data[:,0]\n",
     "y=data[:,1]\n",
     "z=data[:,2]\n",
-    "setlabel3(ax,'(b)')\n",
+    "setlabel(ax,'(b)')\n",
     "#plt.xlim(TimeTurn,TimeEnd)\n",
     "plt.ylim(1.75,10.0)\n",
     "plt.tricontourf(x,y,z,levels,cmap='jet')\n",
@@ -1191,7 +1190,7 @@
     "z=data[:,2]\n",
     "#plt.xlim(TimeTurn,TimeEnd)\n",
     "plt.ylim(1.75,10.0)\n",
-    "setlabel3(ax,'(f)')\n",
+    "setlabel(ax,'(f)')\n",
     "plt.tricontourf(x,y,z,levels,cmap='jet')\n",
     "plt.colorbar()\n",
     "plt.xlabel(\"Time (\"+timeUnit+\")\")\n",
@@ -1206,7 +1205,7 @@
     "x=data[:,0]\n",
     "y=data[:,1]\n",
     "z=data[:,2]\n",
-    "setlabel3(ax,'(c)')\n",
+    "setlabel(ax,'(c)')\n",
     "#plt.xlim(TimeTurn,TimeEnd)\n",
     "plt.ylim(1.75,10.0)\n",
     "plt.tricontourf(x,y,z,levels,cmap='jet')\n",
@@ -1222,7 +1221,7 @@
     "z=data[:,2]\n",
     "#plt.xlim(TimeTurn,TimeEnd)\n",
     "plt.ylim(1.75,10.0)\n",
-    "setlabel3(ax,'(g)')\n",
+    "setlabel(ax,'(g)')\n",
     "plt.tricontourf(x,y,z,levels,cmap='jet')\n",
     "plt.colorbar()\n",
     "plt.xlabel(\"Time (\"+timeUnit+\")\")\n",
@@ -1238,7 +1237,7 @@
     "x=data[:,0]\n",
     "y=data[:,1]\n",
     "z=data[:,2]\n",
-    "setlabel3(ax,'(d)')\n",
+    "setlabel(ax,'(d)')\n",
     "#plt.xlim(TimeTurn,TimeEnd)\n",
     "plt.ylim(1.75,10.0)\n",
     "plt.tricontourf(x,y,z,levels,cmap='jet')\n",
@@ -1254,7 +1253,7 @@
     "z=data[:,2]\n",
     "#plt.xlim(TimeTurn,TimeEnd)\n",
     "plt.ylim(1.75,10.0)\n",
-    "setlabel3(ax,'(h)')\n",
+    "setlabel(ax,'(h)')\n",
     "plt.tricontourf(x,y,z,levels,cmap='jet')\n",
     "plt.colorbar()\n",
     "plt.xlabel(\"Time (\"+timeUnit+\")\")\n",
