--- a/Python/Ionplot.ipynb
+++ b/Python/Ionplot.ipynb
@@ -102,7 +102,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dir='D:\\\\doc\\\\data\\\\ion1test\\\\onepump2\\\\'\n",
+    "dir='D:\\\\doc\\\\data\\\\twopumponeprobe\\\\2082130\\\\'\n",
     "print('Working directory',dir)\n",
     "print(\"\\n\")\n",
     "f=open(dir+\"alog.dat\",encoding=\"utf-8\")\n",
@@ -912,7 +912,7 @@
     "fig, ax = plt.subplots()\n",
     "ax.stackplot(t, population_by_continent.values(),\n",
     "             labels=population_by_continent.keys(), alpha=1)\n",
-    "ax.legend(loc='lower center')\n",
+    "ax.legend(loc=(0.65,0.75),fontsize=6)\n",
     "#ax.set_title('World population')\n",
     "ax.set_xlabel('Time (fs)')\n",
     "ax.set_ylabel('Energy (a.u.)')\n",
@@ -939,7 +939,7 @@
     "fig, ax = plt.subplots()\n",
     "ax.stackplot(t, population_by_continent.values(),\n",
     "             labels=population_by_continent.keys(), alpha=1)\n",
-    "ax.legend(loc='center')\n",
+    "ax.legend(loc=(0.65,0.75),fontsize=6)\n",
     "#ax.set_title('World population')\n",
     "ax.set_xlabel('Time (fs)')\n",
     "ax.set_ylabel('Energy (a.u.)')\n",
@@ -966,7 +966,7 @@
     "fig, ax = plt.subplots()\n",
     "ax.stackplot(t, population_by_continent.values(),\n",
     "             labels=population_by_continent.keys(), alpha=1)\n",
-    "ax.legend(loc=0)\n",
+    "ax.legend(loc=(0.1,0.6))\n",
     "#ax.set_title('World population')\n",
     "ax.set_xlabel('Time (fs)')\n",
     "ax.set_ylabel('Energy (a.u.)')\n",
@@ -995,7 +995,7 @@
     "fig, ax = plt.subplots()\n",
     "ax.stackplot(t, population_by_continent.values(),\n",
     "             labels=population_by_continent.keys(), alpha=1)\n",
-    "ax.legend(loc=0)\n",
+    "ax.legend(loc=(0.6,0.2),fontsize=6)\n",
     "#ax.set_title('World population')\n",
     "ax.set_xlabel('Time (fs)')\n",
     "ax.set_ylabel('Energy (a.u.)')\n",
