--- a/Python/IonPaperPlot.ipynb
+++ b/Python/IonPaperPlot.ipynb
@@ -180,7 +180,9 @@
     "setlabel2(ax2,'(b)')\n",
     "x=[0,1,2,3,4,5]\n",
     "y=[ 0.21807067543956959,0.58789061452344060,0.17765944533726921,1.5804301297742095E-002, 4.9711941976089170E-004,5.4991865364745232E-006]\n",
-    "plt.bar(x, y)\n",
+    "r1=plt.bar(x, y)\n",
+    "plt.ylim(0,0.66)\n",
+    "ax2.bar_label(r1,padding=2.5,fmt='%.4f',fontsize=6)\n",
     "plt.xlabel('Rotational quantum number $J$')\n",
     "plt.ylabel('Population')\n",
     "plt.xticks([0,1,2,3,4,5])\n",
