--- a/Python/xyPlot.ipynb
+++ b/Python/xyPlot.ipynb
@@ -33,8 +33,8 @@
     "#print(f.read(1500))\n",
     "levels=100\n",
     "figureDPI=1200\n",
-    "figureType=\"jpg\"\n",
-    "dir='the path to the data file'"
+    "figureType=\"eps\"\n",
+    "dir='C:\\\\Users\\\\DELL\\\\Desktop\\\\'"
    ]
   },
   {
