--- a/Python/orientation3d.ipynb
+++ b/Python/orientation3d.ipynb
@@ -154,6 +154,7 @@
     "fig = plt.figure()\n",
     "ax = fig.add_subplot(projection='3d')\n",
     "data=np.loadtxt(dir+\"BoltzmanDist.dat\")\n",
+    "print(data)\n",
     "j=data[:,0]\n",
     "m=data[:,1]\n",
     "p=data[:,2]\n",
@@ -209,6 +210,7 @@
     "for i in range(0,max(j)):\n",
     "    mmax=(i+1)**2\n",
     "    for ii in range(0,mmax):\n",
+    "        \n",
     "        "
    ]
   },
