--- a/Python/IonLaserPlot.ipynb
+++ b/Python/IonLaserPlot.ipynb
@@ -67,6 +67,41 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "plt.figure(figsize=(cm_to_inch(16),cm_to_inch(18)))\n",
+    "plt.subplot(2,2,1)\n",
+    "#####plt.title(\"(a)\",titleLoc)\n",
+    "plt.plot(x1,y1,'k-')\n",
+    "plt.xlabel(\"Time(fs)\")\n",
+    "plt.ylabel(\"Instensity (a.u.)\")  \n",
+    "#plt.xlim(19,21)\n",
+    "\n",
+    "plt.subplot(2,2,2)\n",
+    "###plt.title(\"(b)\",titleLoc)\n",
+    "data=np.loadtxt(dir+\"FreDis1.dat\")\n",
+    "x=data[:,0]\n",
+    "y=data[:,1]\n",
+    "plt.plot(x,y,'k-')\n",
+    "plt.xlabel(\"Frequency (a.u.)\")\n",
+    "plt.ylabel(\"Intensity (arb.units)\")\n",
+    "plt.subplot(2,2,3)\n",
+    "##plt.title(\"(c)\",titleLoc)\n",
+    "data=np.loadtxt(dir+\"TimFreDis1.dat\")\n",
+    "x=data[:,0]\n",
+    "y=data[:,1]\n",
+    "z=data[:,2]\n",
+    "plt.tricontourf(x,y,z,levels,cmap='jet')\n",
+    "plt.colorbar(location = 'bottom')\n",
+    "plt.xlabel(\"Time(fs)\")\n",
+    "plt.ylabel(\"Instensity (a.u.)\")\n",
+    "plt.savefig(dir+\"LaserTimFreDis1.\"+figureType,dpi=figureDPI)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "data=np.loadtxt(dir+\"laser.dat\")\n",
     "x1=data[:,0]\n",
     "y1=data[:,1]\n",
