--- a/Python/Ionplot.ipynb
+++ b/Python/Ionplot.ipynb
@@ -102,7 +102,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dir='D:\\\\doc\\\\data\\\\ion1test\\\\onepump2\\\\'\n",
+    "# dir='D:\\\\doc\\\\data\\\\ion1test\\\\onepump2\\\\'\n",
+    "dir='D:\\\\dataofpro\\\\'\n",
     "print('Working directory',dir)\n",
     "print(\"\\n\")\n",
     "f=open(dir+\"alog.dat\",encoding=\"utf-8\")\n",
